--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/events.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/events.yml
@@ -4,5 +4,5 @@ services:
         autoconfigure: true
         public: false
 
-    eZ\Publish\Core\Repository\EventSubscriber\:
+    Ibexa\Core\Core\Repository\EventSubscriber\:
         resource: '../../../eZ/Publish/Core/Repository/EventSubscriber/*'
