--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/routing/js_routing.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/routing/js_routing.yml
@@ -1,6 +1,6 @@
 services:
     ezpublish.js_routing.extractor:
-        class: eZ\Bundle\EzPublishCoreBundle\Routing\JsRouting\ExposedRoutesExtractor
+        class: Ibexa\Bundle\Core\Routing\JsRouting\ExposedRoutesExtractor
         decorates: 'fos_js_routing.extractor'
         arguments:
             - '@ezpublish.js_routing.extractor.inner'
