--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/session.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/session.yml
@@ -3,13 +3,13 @@ parameters:
 
 services:
     ezpublish.session_set_dynamic_name_listener:
-        class: eZ\Bundle\EzPublishCoreBundle\EventListener\SessionSetDynamicNameListener
+        class: Ibexa\Bundle\Core\EventListener\SessionSetDynamicNameListener
         arguments: ["@ezpublish.config.resolver", "@session.storage.factory"]
         tags:
             - { name: kernel.event_subscriber }
 
     ezpublish.session_init_by_post_listener:
-        class: eZ\Bundle\EzPublishCoreBundle\EventListener\SessionInitByPostListener
+        class: Ibexa\Bundle\Core\EventListener\SessionInitByPostListener
         tags:
             - { name: kernel.event_subscriber }
 
