--- a/eZ/Publish/Core/settings/repository/autowire.yml
+++ b/eZ/Publish/Core/settings/repository/autowire.yml
@@ -1,30 +1,30 @@
 services:
-    eZ\Publish\API\Repository\Repository: '@ezpublish.api.repository'
+    Ibexa\Contracts\Core\Repository\Repository: '@ezpublish.api.repository'
 
-    eZ\Publish\Core\MVC\ConfigResolverInterface: '@ezpublish.config.resolver'
-    eZ\Publish\Core\MVC\Symfony\SiteAccess: '@ezpublish.siteaccess'
+    Ibexa\Core\MVC\ConfigResolverInterface: '@ezpublish.config.resolver'
+    Ibexa\Core\MVC\Symfony\SiteAccess: '@ezpublish.siteaccess'
 
-    eZ\Publish\API\Repository\BookmarkService: '@ezpublish.api.service.bookmark'
-    eZ\Publish\API\Repository\ContentService: '@ezpublish.api.service.content'
-    eZ\Publish\API\Repository\ContentTypeService: '@ezpublish.api.service.content_type'
-    eZ\Publish\API\Repository\FieldTypeService: '@ezpublish.api.service.field_type'
-    eZ\Publish\API\Repository\LanguageService: '@ezpublish.api.service.language'
-    eZ\Publish\API\Repository\LocationService: '@ezpublish.api.service.location'
-    eZ\Publish\API\Repository\NotificationService: '@ezpublish.api.service.notification'
-    eZ\Publish\API\Repository\ObjectStateService: '@ezpublish.api.service.object_state'
-    eZ\Publish\API\Repository\RoleService: '@ezpublish.api.service.role'
-    eZ\Publish\API\Repository\SearchService: '@ezpublish.api.service.search'
-    eZ\Publish\API\Repository\SectionService: '@ezpublish.api.service.section'
-    eZ\Publish\API\Repository\UserPreferenceService: '@ezpublish.api.service.user_preference'
-    eZ\Publish\API\Repository\UserService: '@ezpublish.api.service.user'
-    eZ\Publish\API\Repository\URLService: '@ezpublish.api.service.url'
-    eZ\Publish\API\Repository\URLWildcardService: '@ezpublish.api.service.url_wildcard'
-    eZ\Publish\API\Repository\URLAliasService: '@ezpublish.api.service.url_alias'
-    eZ\Publish\API\Repository\TrashService: '@ezpublish.api.service.trash'
-    eZ\Publish\API\Repository\SettingService: '@eZ\Publish\Core\Event\SettingService'
+    Ibexa\Contracts\Core\Repository\BookmarkService: '@ezpublish.api.service.bookmark'
+    Ibexa\Contracts\Core\Repository\ContentService: '@ezpublish.api.service.content'
+    Ibexa\Contracts\Core\Repository\ContentTypeService: '@ezpublish.api.service.content_type'
+    Ibexa\Contracts\Core\Repository\FieldTypeService: '@ezpublish.api.service.field_type'
+    Ibexa\Contracts\Core\Repository\LanguageService: '@ezpublish.api.service.language'
+    Ibexa\Contracts\Core\Repository\LocationService: '@ezpublish.api.service.location'
+    Ibexa\Contracts\Core\Repository\NotificationService: '@ezpublish.api.service.notification'
+    Ibexa\Contracts\Core\Repository\ObjectStateService: '@ezpublish.api.service.object_state'
+    Ibexa\Contracts\Core\Repository\RoleService: '@ezpublish.api.service.role'
+    Ibexa\Contracts\Core\Repository\SearchService: '@ezpublish.api.service.search'
+    Ibexa\Contracts\Core\Repository\SectionService: '@ezpublish.api.service.section'
+    Ibexa\Contracts\Core\Repository\UserPreferenceService: '@ezpublish.api.service.user_preference'
+    Ibexa\Contracts\Core\Repository\UserService: '@ezpublish.api.service.user'
+    Ibexa\Contracts\Core\Repository\URLService: '@ezpublish.api.service.url'
+    Ibexa\Contracts\Core\Repository\URLWildcardService: '@ezpublish.api.service.url_wildcard'
+    Ibexa\Contracts\Core\Repository\URLAliasService: '@ezpublish.api.service.url_alias'
+    Ibexa\Contracts\Core\Repository\TrashService: '@ezpublish.api.service.trash'
+    Ibexa\Contracts\Core\Repository\SettingService: '@Ibexa\Core\Event\SettingService'
 
-    eZ\Publish\API\Repository\PermissionService: '@eZ\Publish\Core\Repository\Permission\CachedPermissionService'
-    eZ\Publish\API\Repository\PermissionResolver: '@eZ\Publish\API\Repository\PermissionService'
-    eZ\Publish\API\Repository\PermissionCriterionResolver: '@eZ\Publish\Core\Repository\Permission\PermissionCriterionResolver'
+    Ibexa\Contracts\Core\Repository\PermissionService: '@Ibexa\Core\Repository\Permission\CachedPermissionService'
+    Ibexa\Contracts\Core\Repository\PermissionResolver: '@Ibexa\Contracts\Core\Repository\PermissionService'
+    Ibexa\Contracts\Core\Repository\PermissionCriterionResolver: '@Ibexa\Core\Repository\Permission\PermissionCriterionResolver'
 
-    eZ\Publish\Core\Helper\FieldsGroups\FieldsGroupsList: '@ezpublish.fields_groups.list'
+    Ibexa\Core\Helper\FieldsGroups\FieldsGroupsList: '@ezpublish.fields_groups.list'
