--- a/eZ/Publish/Core/settings/search_engines/legacy/sort_clause_handlers_content.yml
+++ b/eZ/Publish/Core/settings/search_engines/legacy/sort_clause_handlers_content.yml
@@ -3,4 +3,4 @@ services:
     #  - ezpublish.search.legacy.gateway.sort_clause_handler.content
     # are registered to this one using compilation pass
     ezpublish.search.legacy.gateway.sort_clause_converter.content:
-        class: eZ\Publish\Core\Search\Legacy\Content\Common\Gateway\SortClauseConverter
+        class: Ibexa\Core\Search\Legacy\Content\Common\Gateway\SortClauseConverter
