--- a/eZ/Publish/Core/settings/storage_engines/legacy/content.yml
+++ b/eZ/Publish/Core/settings/storage_engines/legacy/content.yml
@@ -1,26 +1,26 @@
 services:
     ezpublish.persistence.legacy.content.query_builder:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Gateway\DoctrineDatabase\QueryBuilder
+        class: Ibexa\Core\Persistence\Legacy\Content\Gateway\DoctrineDatabase\QueryBuilder
         arguments:
             $connection: '@ezpublish.api.storage_engine.legacy.connection'
 
     ezpublish.persistence.legacy.content.mapper:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Mapper
+        class: Ibexa\Core\Persistence\Legacy\Content\Mapper
         arguments:
             - "@ezpublish.persistence.legacy.field_value_converter.registry"
             - "@ezpublish.spi.persistence.legacy.language.handler"
 
     ezpublish.persistence.legacy.content.gateway.inner:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Gateway\DoctrineDatabase
+        class: Ibexa\Core\Persistence\Legacy\Content\Gateway\DoctrineDatabase
         arguments:
             - "@ezpublish.api.storage_engine.legacy.connection"
-            - '@eZ\Publish\Core\Persistence\Legacy\SharedGateway\Gateway'
+            - '@Ibexa\Core\Persistence\Legacy\SharedGateway\Gateway'
             - "@ezpublish.persistence.legacy.content.query_builder"
             - "@ezpublish.spi.persistence.legacy.language.handler"
             - "@ezpublish.persistence.legacy.language.mask_generator"
 
     ezpublish.persistence.legacy.content.gateway.exception_conversion:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Gateway\ExceptionConversion
+        class: Ibexa\Core\Persistence\Legacy\Content\Gateway\ExceptionConversion
         arguments:
             - "@ezpublish.persistence.legacy.content.gateway.inner"
 
@@ -29,7 +29,7 @@ services:
         alias: ezpublish.persistence.legacy.content.gateway.exception_conversion
 
     ezpublish.persistence.legacy.field_handler:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\FieldHandler
+        class: Ibexa\Core\Persistence\Legacy\Content\FieldHandler
         arguments:
             - "@ezpublish.persistence.legacy.content.gateway"
             - "@ezpublish.persistence.legacy.content.mapper"
@@ -39,7 +39,7 @@ services:
         lazy: true
 
     ezpublish.persistence.legacy.tree_handler:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\TreeHandler
+        class: Ibexa\Core\Persistence\Legacy\Content\TreeHandler
         arguments:
             - "@ezpublish.persistence.legacy.location.gateway"
             - "@ezpublish.persistence.legacy.location.mapper"
@@ -48,7 +48,7 @@ services:
             - "@ezpublish.persistence.legacy.field_handler"
 
     ezpublish.spi.persistence.legacy.content.handler:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Handler
+        class: Ibexa\Core\Persistence\Legacy\Content\Handler
         arguments:
             - "@ezpublish.persistence.legacy.content.gateway"
             - "@ezpublish.persistence.legacy.location.gateway"
