--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/commands.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/commands.yml
@@ -1,6 +1,6 @@
 services:
     ezpublish.console.command.regenerate_url_aliases:
-        class: eZ\Bundle\EzPublishCoreBundle\Command\RegenerateUrlAliasesCommand
+        class: Ibexa\Bundle\Core\Command\RegenerateUrlAliasesCommand
         arguments:
             # intentionally passing inner repository to avoid sending Events due to performance issues
             - '@ezpublish.api.inner_repository'
@@ -9,7 +9,7 @@ services:
             - { name: console.command }
 
     ezplatform.core.command.debug_config_resolver:
-        class: eZ\Bundle\EzPublishCoreBundle\Command\DebugConfigResolverCommand
+        class: Ibexa\Bundle\Core\Command\DebugConfigResolverCommand
         arguments:
             - "@ezpublish.config.resolver"
             - "@ezpublish.siteaccess"
@@ -17,22 +17,22 @@ services:
             - { name: console.command }
 
     ezplatform.core.command.check_urls:
-        class: eZ\Bundle\EzPublishCoreBundle\Command\CheckURLsCommand
+        class: Ibexa\Bundle\Core\Command\CheckURLsCommand
         arguments:
-            - '@eZ\Publish\API\Repository\UserService'
-            - '@eZ\Publish\API\Repository\PermissionResolver'
-            - '@eZ\Publish\API\Repository\URLService'
+            - '@Ibexa\Contracts\Core\Repository\UserService'
+            - '@Ibexa\Contracts\Core\Repository\PermissionResolver'
+            - '@Ibexa\Contracts\Core\Repository\URLService'
             - '@ezpublish.url_checker'
         tags:
             - { name: console.command }
 
-    eZ\Bundle\EzPublishCoreBundle\Command\UpdateTimestampsToUTCCommand:
+    Ibexa\Bundle\Core\Command\UpdateTimestampsToUTCCommand:
         arguments:
             - '@ezpublish.api.search_engine.legacy.connection'
         tags:
             - { name: console.command }
 
-    eZ\Bundle\EzPublishCoreBundle\Command\ReindexCommand:
+    Ibexa\Bundle\Core\Command\ReindexCommand:
         autowire: true
         autoconfigure: true
         arguments:
@@ -45,7 +45,7 @@ services:
         tags:
             - { name: console.command }
 
-    eZ\Bundle\EzPublishCoreBundle\Command\NormalizeImagesPathsCommand:
+    Ibexa\Bundle\Core\Command\NormalizeImagesPathsCommand:
         autowire: true
         autoconfigure: true
         arguments:
