--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/helpers.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/helpers.yml
@@ -6,7 +6,7 @@ parameters:
 services:
     # Helpers
     ezpublish.translation_helper:
-        class: eZ\Publish\Core\Helper\TranslationHelper
+        class: Ibexa\Core\Helper\TranslationHelper
         arguments:
             - "@ezpublish.config.resolver"
             - "@ezpublish.api.service.content"
@@ -14,17 +14,17 @@ services:
             - "@?logger"
 
     ezpublish.field_helper:
-        class: eZ\Publish\Core\Helper\FieldHelper
+        class: Ibexa\Core\Helper\FieldHelper
         arguments: ["@ezpublish.translation_helper", "@ezpublish.api.service.content_type", "@ezpublish.api.service.field_type"]
 
     ezpublish.content_preview_helper:
-        class: eZ\Publish\Core\Helper\ContentPreviewHelper
+        class: Ibexa\Core\Helper\ContentPreviewHelper
         arguments: ["@event_dispatcher", "@ezpublish.siteaccess_router"]
         calls:
             - [setSiteAccess, ["@ezpublish.siteaccess"]]
 
     ezpublish.config_scope_listener:
-        class: eZ\Bundle\EzPublishCoreBundle\EventListener\ConfigScopeListener
+        class: Ibexa\Bundle\Core\EventListener\ConfigScopeListener
         arguments:
             $configResolvers: !tagged ezpublish.config.resolver
             $viewManager: '@ezpublish.view_manager'
@@ -32,36 +32,36 @@ services:
             - { name: kernel.event_subscriber }
 
     ezpublish.content_preview.location_provider:
-        class: eZ\Publish\Core\Helper\PreviewLocationProvider
+        class: Ibexa\Core\Helper\PreviewLocationProvider
         arguments:
             - "@ezpublish.api.service.location"
             - "@ezpublish.api.service.content"
             - "@ezpublish.spi.persistence.cache.locationHandler"
 
     ezpublish.content_info_location_loader.main:
-        class: 'eZ\Publish\Core\Helper\ContentInfoLocationLoader\SudoMainLocationLoader'
+        class: 'Ibexa\Core\Helper\ContentInfoLocationLoader\SudoMainLocationLoader'
         arguments:
             - "@ezpublish.api.repository"
 
-    eZ\Bundle\EzPublishCoreBundle\SiteAccess\LanguageResolver:
-        parent: eZ\Publish\Core\Repository\SiteAccessAware\Language\AbstractLanguageResolver
+    Ibexa\Bundle\Core\SiteAccess\LanguageResolver:
+        parent: Ibexa\Core\Repository\SiteAccessAware\Language\AbstractLanguageResolver
         arguments:
             $configResolver: '@ezpublish.config.resolver'
 
-    eZ\Publish\API\Repository\LanguageResolver:
-        alias: eZ\Bundle\EzPublishCoreBundle\SiteAccess\LanguageResolver
+    Ibexa\Contracts\Core\Repository\LanguageResolver:
+        alias: Ibexa\Bundle\Core\SiteAccess\LanguageResolver
 
-    eZ\Publish\Core\IO\IOConfigProvider:
-        alias: eZ\Bundle\EzPublishCoreBundle\SiteAccess\Config\IOConfigResolver
+    Ibexa\Core\IO\IOConfigProvider:
+        alias: Ibexa\Bundle\Core\SiteAccess\Config\IOConfigResolver
 
-    eZ\Bundle\EzPublishCoreBundle\SiteAccess\Config\ComplexConfigProcessor:
+    Ibexa\Bundle\Core\SiteAccess\Config\ComplexConfigProcessor:
         arguments:
             $configResolver: '@ezpublish.config.resolver'
             $siteAccessService: '@ezpublish.siteaccess_service'
 
-    eZ\Publish\SPI\SiteAccess\ConfigProcessor:
-        alias: eZ\Bundle\EzPublishCoreBundle\SiteAccess\Config\ComplexConfigProcessor
+    Ibexa\Contracts\Core\SiteAccess\ConfigProcessor:
+        alias: Ibexa\Bundle\Core\SiteAccess\Config\ComplexConfigProcessor
 
-    eZ\Bundle\EzPublishCoreBundle\SiteAccess\Config\IOConfigResolver:
+    Ibexa\Bundle\Core\SiteAccess\Config\IOConfigResolver:
         arguments:
-            $complexConfigProcessor: '@eZ\Bundle\EzPublishCoreBundle\SiteAccess\Config\ComplexConfigProcessor'
+            $complexConfigProcessor: '@Ibexa\Bundle\Core\SiteAccess\Config\ComplexConfigProcessor'
