--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/image.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/image.yml
@@ -1,15 +1,15 @@
 services:
     # Filters
     ezpublish.image_alias.imagine.filter.unsupported:
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\Filter\UnsupportedFilter
+        class: Ibexa\Bundle\Core\Imagine\Filter\UnsupportedFilter
         public: false
 
     ezpublish.image_alias.imagine.filter.reduce_noise.imagick:
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\Filter\Imagick\ReduceNoiseFilter
+        class: Ibexa\Bundle\Core\Imagine\Filter\Imagick\ReduceNoiseFilter
         public: false
 
     ezpublish.image_alias.imagine.filter.reduce_noise.gmagick:
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\Filter\Gmagick\ReduceNoiseFilter
+        class: Ibexa\Bundle\Core\Imagine\Filter\Gmagick\ReduceNoiseFilter
         public: false
 
     # Aliasing by default to unsupported filter as it's not supported by GD.
@@ -18,11 +18,11 @@ services:
         alias: ezpublish.image_alias.imagine.filter.unsupported
 
     ezpublish.image_alias.imagine.filter.swirl.imagick:
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\Filter\Imagick\SwirlFilter
+        class: Ibexa\Bundle\Core\Imagine\Filter\Imagick\SwirlFilter
         public: false
 
     ezpublish.image_alias.imagine.filter.swirl.gmagick:
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\Filter\Gmagick\SwirlFilter
+        class: Ibexa\Bundle\Core\Imagine\Filter\Gmagick\SwirlFilter
         public: false
 
     ezpublish.image_alias.imagine.filter.swirl:
@@ -30,13 +30,13 @@ services:
 
     # Filter loaders
     ezpublish.image_alias.imagine.binary_loader:
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\BinaryLoader
+        class: Ibexa\Bundle\Core\Imagine\BinaryLoader
         arguments: ["@ezpublish.fieldType.ezimage.io_service", "@mime_types"]
         tags:
             - { name: liip_imagine.binary.loader, loader: ezpublish }
 
     ezpublish.image_alias.imagine.cache_resolver:
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\IORepositoryResolver
+        class: Ibexa\Bundle\Core\Imagine\IORepositoryResolver
         arguments:
             - "@ezpublish.fieldType.ezimage.io_service"
             - "@router.request_context"
@@ -47,12 +47,12 @@ services:
             - { name: liip_imagine.cache.resolver, resolver: ezpublish }
 
     ezpublish.image_alias.imagine.cache_resolver_decorator_factory:
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\Cache\ResolverFactory
+        class: Ibexa\Bundle\Core\Imagine\Cache\ResolverFactory
         arguments:
             - '@ezpublish.config.resolver'
             - '@ezpublish.image_alias.imagine.cache_resolver_decorator.inner'
-            - 'eZ\Bundle\EzPublishCoreBundle\Imagine\Cache\Resolver\ProxyResolver'
-            - 'eZ\Bundle\EzPublishCoreBundle\Imagine\Cache\Resolver\RelativeResolver'
+            - 'Ibexa\Bundle\Core\Imagine\Cache\Resolver\ProxyResolver'
+            - 'Ibexa\Bundle\Core\Imagine\Cache\Resolver\RelativeResolver'
 
     ezpublish.image_alias.imagine.cache_resolver_decorator:
         class: Liip\ImagineBundle\Imagine\Cache\Resolver\ProxyResolver
@@ -61,7 +61,7 @@ services:
         lazy: true
 
     ezpublish.image_alias.imagine.cache.alias_generator_decorator:
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\Cache\AliasGeneratorDecorator
+        class: Ibexa\Bundle\Core\Imagine\Cache\AliasGeneratorDecorator
         lazy: true
         arguments:
             - '@ezpublish.image_alias.imagine.variation.imagine_alias_generator'
@@ -72,7 +72,7 @@ services:
             - [setSiteAccess, ['@ezpublish.siteaccess']]
 
     ezpublish.image_alias.imagine.variation.imagine_alias_generator:
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\Variation\ImagineAwareAliasGenerator
+        class: Ibexa\Bundle\Core\Imagine\Variation\ImagineAwareAliasGenerator
         arguments:
             - '@ezpublish.image_alias.imagine.alias_generator'
             - '@ezpublish.image_alias.variation_path_generator'
@@ -80,7 +80,7 @@ services:
             - '@liip_imagine'
 
     ezpublish.image_alias.imagine.alias_generator:
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\AliasGenerator
+        class: Ibexa\Bundle\Core\Imagine\AliasGenerator
         arguments:
             - "@ezpublish.image_alias.imagine.binary_loader"
             - "@liip_imagine.filter.manager"
@@ -89,21 +89,21 @@ services:
             - "@?logger"
 
     ezpublish.image_alias.imagine.alias_cleaner:
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\AliasCleaner
+        class: Ibexa\Bundle\Core\Imagine\AliasCleaner
         arguments: ["@ezpublish.image_alias.imagine.cache_resolver"]
 
-    eZ\Publish\Core\FieldType\Image\AliasCleanerInterface:
+    Ibexa\Core\FieldType\Image\AliasCleanerInterface:
         alias: ezpublish.image_alias.imagine.alias_cleaner
 
     ezpublish.image_alias.imagine.placeholder_provider.configurator:
-        class: 'eZ\Bundle\EzPublishCoreBundle\Imagine\PlaceholderAliasGeneratorConfigurator'
+        class: 'Ibexa\Bundle\Core\Imagine\PlaceholderAliasGeneratorConfigurator'
         arguments:
             - '@ezpublish.config.resolver'
             - '@ezpublish.image_alias.imagine.placeholder_provider.registry'
             - '%image_alias.placeholder_providers%'
 
     ezpublish.image_alias.imagine.alias_generator.placeholder:
-        class: 'eZ\Bundle\EzPublishCoreBundle\Imagine\PlaceholderAliasGenerator'
+        class: 'Ibexa\Bundle\Core\Imagine\PlaceholderAliasGenerator'
         decorates: 'ezpublish.image_alias.imagine.alias_generator'
         configurator: ['@ezpublish.image_alias.imagine.placeholder_provider.configurator', 'configure']
         arguments:
@@ -113,25 +113,25 @@ services:
         public: false
 
     ezpublish.image_alias.imagine.alias_generator.image_asset:
-        class: 'eZ\Bundle\EzPublishCoreBundle\Imagine\ImageAsset\AliasGenerator'
+        class: 'Ibexa\Bundle\Core\Imagine\ImageAsset\AliasGenerator'
         arguments:
             - '@ezpublish.image_alias.imagine.cache.alias_generator_decorator'
             - '@ezpublish.api.service.content'
-            - '@eZ\Publish\Core\FieldType\ImageAsset\AssetMapper'
+            - '@Ibexa\Core\FieldType\ImageAsset\AssetMapper'
         public: false
 
     ezpublish.image_alias.imagine.placeholder_provider.registry:
-        class: 'eZ\Bundle\EzPublishCoreBundle\Imagine\PlaceholderProviderRegistry'
+        class: 'Ibexa\Bundle\Core\Imagine\PlaceholderProviderRegistry'
 
     ezpublish.image_alias.placeholder_provider.generic:
-        class: 'eZ\Bundle\EzPublishCoreBundle\Imagine\PlaceholderProvider\GenericProvider'
+        class: 'Ibexa\Bundle\Core\Imagine\PlaceholderProvider\GenericProvider'
         arguments:
             - '@liip_imagine'
         tags:
             - { name: 'ezpublish.placeholder_provider', type: 'generic' }
 
     ezpublish.image_alias.imagine.placeholder_provider.remote:
-        class: 'eZ\Bundle\EzPublishCoreBundle\Imagine\PlaceholderProvider\RemoteProvider'
+        class: 'Ibexa\Bundle\Core\Imagine\PlaceholderProvider\RemoteProvider'
         tags:
             - { name: 'ezpublish.placeholder_provider', type: 'remote' }
 
@@ -143,19 +143,19 @@ services:
 
     ezpublish.image_alias.imagine.filter.loader.scaledownonly.width_height:
         parent: ezpublish.image_alias.imagine.filter.loader.scaledown.base
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\Filter\Loader\ScaleDownOnlyFilterLoader
+        class: Ibexa\Bundle\Core\Imagine\Filter\Loader\ScaleDownOnlyFilterLoader
         tags:
             - { name: liip_imagine.filter.loader, loader: "geometry/scaledownonly" }
 
     ezpublish.image_alias.imagine.filter.loader.scaledownonly.width:
         parent: ezpublish.image_alias.imagine.filter.loader.scaledown.base
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\Filter\Loader\ScaleWidthDownOnlyFilterLoader
+        class: Ibexa\Bundle\Core\Imagine\Filter\Loader\ScaleWidthDownOnlyFilterLoader
         tags:
             - { name: liip_imagine.filter.loader, loader: "geometry/scalewidthdownonly" }
 
     ezpublish.image_alias.imagine.filter.loader.scaledownonly.height:
         parent: ezpublish.image_alias.imagine.filter.loader.scaledown.base
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\Filter\Loader\ScaleHeightDownOnlyFilterLoader
+        class: Ibexa\Bundle\Core\Imagine\Filter\Loader\ScaleHeightDownOnlyFilterLoader
         tags:
             - { name: liip_imagine.filter.loader, loader: "geometry/scaleheightdownonly" }
 
@@ -167,19 +167,19 @@ services:
 
     ezpublish.image_alias.imagine.filter.loader.scalewidth:
         parent: ezpublish.image_alias.imagine.filter.loader.relative_scale
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\Filter\Loader\ScaleWidthFilterLoader
+        class: Ibexa\Bundle\Core\Imagine\Filter\Loader\ScaleWidthFilterLoader
         tags:
             - { name: liip_imagine.filter.loader, loader: "geometry/scalewidth" }
 
     ezpublish.image_alias.imagine.filter.loader.scaleheight:
         parent: ezpublish.image_alias.imagine.filter.loader.relative_scale
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\Filter\Loader\ScaleHeightFilterLoader
+        class: Ibexa\Bundle\Core\Imagine\Filter\Loader\ScaleHeightFilterLoader
         tags:
             - { name: liip_imagine.filter.loader, loader: "geometry/scaleheight" }
 
     ezpublish.image_alias.imagine.filter.loader.scale:
         parent: ezpublish.image_alias.imagine.filter.loader.relative_scale
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\Filter\Loader\ScaleFilterLoader
+        class: Ibexa\Bundle\Core\Imagine\Filter\Loader\ScaleFilterLoader
         tags:
             - { name: liip_imagine.filter.loader, loader: "geometry/scale" }
 
@@ -191,18 +191,18 @@ services:
 
     ezpublish.image_alias.imagine.filter.loader.scale_exact:
         parent: ezpublish.image_alias.imagine.filter.loader.scale_exact.base
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\Filter\Loader\ScaleExactFilterLoader
+        class: Ibexa\Bundle\Core\Imagine\Filter\Loader\ScaleExactFilterLoader
         tags:
             - { name: liip_imagine.filter.loader, loader: "geometry/scaleexact" }
 
     ezpublish.image_alias.imagine.filter.loader.scale_percent:
         parent: ezpublish.image_alias.imagine.filter.loader.scale_exact.base
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\Filter\Loader\ScalePercentFilterLoader
+        class: Ibexa\Bundle\Core\Imagine\Filter\Loader\ScalePercentFilterLoader
         tags:
             - { name: liip_imagine.filter.loader, loader: "geometry/scalepercent" }
 
     ezpublish.image_alias.imagine.filter.loader.crop:
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\Filter\Loader\CropFilterLoader
+        class: Ibexa\Bundle\Core\Imagine\Filter\Loader\CropFilterLoader
         public: false
         calls:
             - [setInnerLoader, ["@liip_imagine.filter.loader.crop"]]
@@ -210,27 +210,27 @@ services:
             - { name: liip_imagine.filter.loader, loader: "geometry/crop" }
 
     ezpublish.image_alias.imagine.filter.loader.border:
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\Filter\Loader\BorderFilterLoader
+        class: Ibexa\Bundle\Core\Imagine\Filter\Loader\BorderFilterLoader
         public: false
         tags:
             - { name: liip_imagine.filter.loader, loader: "border" }
 
     ezpublish.image_alias.imagine.filter.loader.reduce_noise:
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\Filter\Loader\ReduceNoiseFilterLoader
+        class: Ibexa\Bundle\Core\Imagine\Filter\Loader\ReduceNoiseFilterLoader
         arguments: ["@ezpublish.image_alias.imagine.filter.reduce_noise"]
         public: false
         tags:
             - { name: liip_imagine.filter.loader, loader: "filter/noise" }
 
     ezpublish.image_alias.imagine.filter.loader.swirl:
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\Filter\Loader\SwirlFilterLoader
+        class: Ibexa\Bundle\Core\Imagine\Filter\Loader\SwirlFilterLoader
         arguments: ["@ezpublish.image_alias.imagine.filter.swirl"]
         public: false
         tags:
             - { name: liip_imagine.filter.loader, loader: "filter/swirl" }
 
     ezpublish.image_alias.imagine.filter.loader.grayscale:
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\Filter\Loader\GrayscaleFilterLoader
+        class: Ibexa\Bundle\Core\Imagine\Filter\Loader\GrayscaleFilterLoader
         public: false
         tags:
             - { name: liip_imagine.filter.loader, loader: "colorspace/gray" }
@@ -242,7 +242,7 @@ services:
         alias: ezpublish.image_alias.variation_purger.io
 
     ezpublish.image_alias.variation_purger.io:
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\VariationPurger\IOVariationPurger
+        class: Ibexa\Bundle\Core\Imagine\VariationPurger\IOVariationPurger
         arguments:
             - "@ezpublish.fieldType.ezimage.io_service"
             - "@ezpublish.image_alias.variation_path_generator.alias_directory"
@@ -250,7 +250,7 @@ services:
             - [setLogger, ["@?logger"]]
 
     ezpublish.image_alias.variation_purger.legacy_storage_image_file:
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\VariationPurger\ImageFileVariationPurger
+        class: Ibexa\Bundle\Core\Imagine\VariationPurger\ImageFileVariationPurger
         arguments:
             - "@ezpublish.image_alias.variation_purger.legacy_storage_image_file.image_file_list"
             - "@ezpublish.fieldType.ezimage.io_service"
@@ -259,14 +259,14 @@ services:
             - [setLogger, ["@?logger"]]
 
     ezpublish.image_alias.variation_purger.legacy_storage_image_file.image_file_list:
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\VariationPurger\LegacyStorageImageFileList
+        class: Ibexa\Bundle\Core\Imagine\VariationPurger\LegacyStorageImageFileList
         arguments:
             - "@ezpublish.image_alias.variation_purger.legacy_storage_image_file.image_file_row_reader"
-            - '@eZ\Publish\Core\IO\IOConfigProvider'
+            - '@Ibexa\Core\IO\IOConfigProvider'
             - '@ezpublish.config.resolver'
 
     ezpublish.image_alias.variation_purger.legacy_storage_image_file.image_file_row_reader:
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\VariationPurger\LegacyStorageImageFileRowReader
+        class: Ibexa\Bundle\Core\Imagine\VariationPurger\LegacyStorageImageFileRowReader
         arguments:
             $connection: '@ezpublish.persistence.connection'
 
@@ -277,10 +277,10 @@ services:
         alias: ezpublish.image_alias.variation_path_generator.alias_directory
 
     ezpublish.image_alias.variation_path_generator.original_directory:
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\VariationPathGenerator\OriginalDirectoryVariationPathGenerator
+        class: Ibexa\Bundle\Core\Imagine\VariationPathGenerator\OriginalDirectoryVariationPathGenerator
 
     ezpublish.image_alias.variation_path_generator.alias_directory:
-        class: eZ\Bundle\EzPublishCoreBundle\Imagine\VariationPathGenerator\AliasDirectoryVariationPathGenerator
+        class: Ibexa\Bundle\Core\Imagine\VariationPathGenerator\AliasDirectoryVariationPathGenerator
 
     # SPI Aliases
-    eZ\Publish\SPI\Variation\VariationHandler: '@ezpublish.image_alias.imagine.variation.imagine_alias_generator'
+    Ibexa\Contracts\Core\Variation\VariationHandler: '@ezpublish.image_alias.imagine.variation.imagine_alias_generator'
