--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/papi.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/papi.yml
@@ -11,18 +11,18 @@ parameters:
 services:
     # API
     ezpublish.api.repository.factory:
-        class: eZ\Bundle\EzPublishCoreBundle\ApiLoader\RepositoryFactory
+        class: Ibexa\Bundle\Core\ApiLoader\RepositoryFactory
         arguments:
             - "@ezpublish.config.resolver"
             - "%ezpublish.api.inner_repository.class%"
             - "%ezpublish.api.role.policy_map%"
-            - '@eZ\Publish\API\Repository\LanguageResolver'
+            - '@Ibexa\Contracts\Core\Repository\LanguageResolver'
             - "@?logger"
         calls:
             - [setContainer, ["@service_container"]]
 
     ezpublish.api.storage_engine.factory:
-        class: eZ\Bundle\EzPublishCoreBundle\ApiLoader\StorageEngineFactory
+        class: Ibexa\Bundle\Core\ApiLoader\StorageEngineFactory
         arguments:
             - "@ezpublish.api.repository_configuration_provider"
 
@@ -31,17 +31,17 @@ services:
         alias: ezpublish.spi.persistence.cache
 
     ezpublish.api.storage_engine:
-        class: eZ\Publish\SPI\Persistence\Handler
+        class: Ibexa\Contracts\Core\Persistence\Handler
         factory: ["@ezpublish.api.storage_engine.factory", buildStorageEngine]
         public: false
 
     ezpublish.api.search_engine.factory:
-        class: eZ\Bundle\EzPublishCoreBundle\ApiLoader\SearchEngineFactory
+        class: Ibexa\Bundle\Core\ApiLoader\SearchEngineFactory
         arguments:
             - "@ezpublish.api.repository_configuration_provider"
 
     ezpublish.api.search_engine.indexer.factory:
-            class: eZ\Bundle\EzPublishCoreBundle\ApiLoader\SearchEngineIndexerFactory
+            class: Ibexa\Bundle\Core\ApiLoader\SearchEngineIndexerFactory
             arguments:
                 - "@ezpublish.api.repository_configuration_provider"
 
@@ -52,24 +52,24 @@ services:
         alias: ezpublish.spi.search_engine.indexer
 
     ezpublish.spi.search_engine:
-        class: eZ\Publish\SPI\Search\VersatileHandler
+        class: Ibexa\Contracts\Core\Search\VersatileHandler
         factory: ["@ezpublish.api.search_engine.factory", buildSearchEngine]
         public: false
         lazy: true
 
     ezpublish.spi.search_engine.indexer:
-        class: eZ\Publish\Core\Search\Common\Indexer
+        class: Ibexa\Core\Search\Common\Indexer
         factory: ["@ezpublish.api.search_engine.indexer.factory", buildSearchEngineIndexer]
         public: false
 
     # Redefine background indexer to the one provided here which works on kernel/console.terminate.
     ezpublish.search.background_indexer:
-        class: eZ\Bundle\EzPublishCoreBundle\EventListener\BackgroundIndexingTerminateListener
+        class: Ibexa\Bundle\Core\EventListener\BackgroundIndexingTerminateListener
         arguments:
             - '@ezpublish.api.persistence_handler'
             - '@ezpublish.spi.search'
         tags:
             - { name: kernel.event_subscriber }
 
-    eZ\Publish\SPI\Search\Content\IndexerGateway:
-        alias: eZ\Publish\Core\Search\Legacy\Content\IndexerGateway
+    Ibexa\Contracts\Core\Search\Content\IndexerGateway:
+        alias: Ibexa\Core\Search\Legacy\Content\IndexerGateway
