--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/query_types.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/query_types.yml
@@ -4,33 +4,33 @@ services:
         autoconfigure: true
         public: false
 
-    eZ\Publish\Core\QueryType\BuiltIn\AncestorsQueryType:
+    Ibexa\Core\QueryType\BuiltIn\AncestorsQueryType:
         tags:
             - { name: ezplatform.query_type, alias: 'Ancestors' }
 
-    eZ\Publish\Core\QueryType\BuiltIn\ChildrenQueryType:
+    Ibexa\Core\QueryType\BuiltIn\ChildrenQueryType:
         tags:
             - { name: ezplatform.query_type, alias: 'Children' }
 
-    eZ\Publish\Core\QueryType\BuiltIn\SiblingsQueryType:
+    Ibexa\Core\QueryType\BuiltIn\SiblingsQueryType:
         tags:
             - { name: ezplatform.query_type, alias: 'Siblings' }
 
-    eZ\Publish\Core\QueryType\BuiltIn\RelatedToContentQueryType:
+    Ibexa\Core\QueryType\BuiltIn\RelatedToContentQueryType:
         tags:
             - { name: ezplatform.query_type, alias: 'RelatedTo' }
 
-    eZ\Publish\Core\QueryType\BuiltIn\GeoLocationQueryType:
+    Ibexa\Core\QueryType\BuiltIn\GeoLocationQueryType:
         tags:
             - { name: ezplatform.query_type, alias: 'GeoLocation' }
 
-    eZ\Publish\Core\QueryType\BuiltIn\SubtreeQueryType:
+    Ibexa\Core\QueryType\BuiltIn\SubtreeQueryType:
         tags:
             - { name: ezplatform.query_type, alias: 'Subtree' }
 
-    eZ\Publish\Core\QueryType\BuiltIn\SortClausesFactory:
+    Ibexa\Core\QueryType\BuiltIn\SortClausesFactory:
         arguments:
-            $sortClauseArgsParser: '@eZ\Publish\Core\QueryType\BuiltIn\SortSpec\SortClauseParserDispatcher'
+            $sortClauseArgsParser: '@Ibexa\Core\QueryType\BuiltIn\SortSpec\SortClauseParserDispatcher'
 
-    eZ\Publish\Core\QueryType\BuiltIn\SortClausesFactoryInterface:
-        alias: 'eZ\Publish\Core\QueryType\BuiltIn\SortClausesFactory'
+    Ibexa\Core\QueryType\BuiltIn\SortClausesFactoryInterface:
+        alias: 'Ibexa\Core\QueryType\BuiltIn\SortClausesFactory'
