--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/services.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/services.yml
@@ -12,10 +12,10 @@ parameters:
 services:
     # Siteaccess is injected in the container at runtime
     ezpublish.siteaccess:
-        class: eZ\Publish\Core\MVC\Symfony\SiteAccess
+        class: Ibexa\Core\MVC\Symfony\SiteAccess
         arguments: ["%ezpublish.siteaccess.default.name%", 'uninitialized']
 
-    eZ\Bundle\EzPublishCoreBundle\DependencyInjection\Configuration\ConfigResolver\DefaultScopeConfigResolver:
+    Ibexa\Bundle\Core\DependencyInjection\Configuration\ConfigResolver\DefaultScopeConfigResolver:
         arguments:
             - '%ezpublish.config.default_scope%'
         calls:
@@ -24,7 +24,7 @@ services:
         tags:
             - { name: ezpublish.config.resolver, priority: 0 }
 
-    eZ\Bundle\EzPublishCoreBundle\DependencyInjection\Configuration\ConfigResolver\SiteAccessGroupConfigResolver:
+    Ibexa\Bundle\Core\DependencyInjection\Configuration\ConfigResolver\SiteAccessGroupConfigResolver:
         arguments:
             - '@ezpublish.siteaccess.provider'
             - '%ezpublish.config.default_scope%'
@@ -36,7 +36,7 @@ services:
         tags:
             - { name: ezpublish.config.resolver, priority: 50 }
 
-    eZ\Bundle\EzPublishCoreBundle\DependencyInjection\Configuration\ConfigResolver\StaticSiteAccessConfigResolver:
+    Ibexa\Bundle\Core\DependencyInjection\Configuration\ConfigResolver\StaticSiteAccessConfigResolver:
         arguments:
             - '@ezpublish.siteaccess.provider'
             - '%ezpublish.config.default_scope%'
@@ -47,7 +47,7 @@ services:
         tags:
             - { name: ezpublish.config.resolver, priority: 100 }
 
-    eZ\Bundle\EzPublishCoreBundle\DependencyInjection\Configuration\ConfigResolver\GlobalScopeConfigResolver:
+    Ibexa\Bundle\Core\DependencyInjection\Configuration\ConfigResolver\GlobalScopeConfigResolver:
         arguments:
             - '%ezpublish.config.default_scope%'
         calls:
@@ -56,21 +56,21 @@ services:
         tags:
             - { name: ezpublish.config.resolver, priority: 255 }
 
-    eZ\Bundle\EzPublishCoreBundle\DependencyInjection\Configuration\ChainConfigResolver:
+    Ibexa\Bundle\Core\DependencyInjection\Configuration\ChainConfigResolver:
         public: true # @todo should be private
 
     ezpublish.config.resolver:
         public: true # @todo should be private
-        alias: eZ\Bundle\EzPublishCoreBundle\DependencyInjection\Configuration\ChainConfigResolver
+        alias: Ibexa\Bundle\Core\DependencyInjection\Configuration\ChainConfigResolver
 
     ezpublish.config.dynamic_setting.parser:
-        class: eZ\Bundle\EzPublishCoreBundle\DependencyInjection\Configuration\SiteAccessAware\DynamicSettingParser
+        class: Ibexa\Bundle\Core\DependencyInjection\Configuration\SiteAccessAware\DynamicSettingParser
 
     ezpublish.config.complex_setting_value.resolver:
-        class: eZ\Bundle\EzPublishCoreBundle\DependencyInjection\Configuration\ComplexSettings\ComplexSettingValueResolver
+        class: Ibexa\Bundle\Core\DependencyInjection\Configuration\ComplexSettings\ComplexSettingValueResolver
 
     ezpublish.console_event_listener:
-        class: eZ\Bundle\EzPublishCoreBundle\EventListener\ConsoleCommandListener
+        class: Ibexa\Bundle\Core\EventListener\ConsoleCommandListener
         arguments:
             - "%ezpublish.siteaccess.default%"
             - '@ezpublish.siteaccess.provider'
@@ -81,18 +81,18 @@ services:
         tags:
             - { name: kernel.event_subscriber }
 
-    eZ\Bundle\EzPublishCoreBundle\EventListener\BackwardCompatibleCommandListener:
+    Ibexa\Bundle\Core\EventListener\BackwardCompatibleCommandListener:
         tags:
             - { name: kernel.event_subscriber }
 
     ezpublish.controller.base:
-        class: eZ\Publish\Core\MVC\Symfony\Controller\Controller
+        class: Ibexa\Core\MVC\Symfony\Controller\Controller
         abstract: true
         calls:
             - [ setContainer, ["@service_container"] ]
 
     ezpublish.controller.content.view:
-        class: eZ\Publish\Core\MVC\Symfony\Controller\Content\ViewController
+        class: Ibexa\Core\MVC\Symfony\Controller\Content\ViewController
         arguments:
             - "@ezpublish.view_manager"
             - "@security.authorization_checker"
@@ -101,7 +101,7 @@ services:
             - { name: controller.service_arguments }
 
     ezpublish.controller.content.preview.core:
-        class: eZ\Publish\Core\MVC\Symfony\Controller\Content\PreviewController
+        class: Ibexa\Core\MVC\Symfony\Controller\Content\PreviewController
         arguments:
             - "@ezpublish.api.service.content"
             - "@http_kernel"
@@ -117,7 +117,7 @@ services:
         public: true
 
     ezpublish.controller.content.download:
-        class: eZ\Publish\Core\MVC\Symfony\Controller\Content\DownloadController
+        class: Ibexa\Core\MVC\Symfony\Controller\Content\DownloadController
         arguments:
             - "@ezpublish.api.service.content"
             - "@ezpublish.fieldType.ezbinaryfile.io_service"
@@ -129,7 +129,7 @@ services:
               - { name: controller.service_arguments }
 
     ezpublish.controller.content.download_redirection:
-        class: eZ\Publish\Core\MVC\Symfony\Controller\Content\DownloadRedirectionController
+        class: Ibexa\Core\MVC\Symfony\Controller\Content\DownloadRedirectionController
         arguments:
             - "@ezpublish.api.service.content"
             - "@router"
@@ -145,7 +145,7 @@ services:
         alias: ezpublish.controller.content.view
 
     ezpublish.view_controller_listener:
-        class: eZ\Bundle\EzPublishCoreBundle\EventListener\ViewControllerListener
+        class: Ibexa\Bundle\Core\EventListener\ViewControllerListener
         arguments:
             - "@controller_resolver"
             - "@ezpublish.view_builder.registry"
@@ -155,13 +155,13 @@ services:
             - { name: kernel.event_subscriber }
 
     ezpublish.fragment_listener.factory:
-        class: eZ\Bundle\EzPublishCoreBundle\Fragment\FragmentListenerFactory
+        class: Ibexa\Bundle\Core\Fragment\FragmentListenerFactory
         arguments: ["%fragment.path%"]
         calls:
             - [setRequestStack, ["@request_stack"]]
 
     ezpublish.decorated_fragment_renderer:
-        class: eZ\Bundle\EzPublishCoreBundle\Fragment\DecoratedFragmentRenderer
+        class: Ibexa\Bundle\Core\Fragment\DecoratedFragmentRenderer
         # Arguments replaced at compile time
         arguments: []
         calls:
@@ -169,7 +169,7 @@ services:
             - [setSiteAccess, ["@ezpublish.siteaccess"]]
         abstract: true
 
-    eZ\Bundle\EzPublishCoreBundle\Fragment\DirectFragmentRenderer:
+    Ibexa\Bundle\Core\Fragment\DirectFragmentRenderer:
         arguments:
             $kernel: '@kernel'
             $controllerListener: '@ezpublish.view_controller_listener'
@@ -178,73 +178,73 @@ services:
             $argumentValueResolver: '@argument_resolver.request_attribute'
             $viewTemplateRenderer: '@ezpublish.view.template_renderer'
         tags:
-            - { name: kernel.fragment_renderer, alias: !php/const eZ\Bundle\EzPublishCoreBundle\Fragment\DirectFragmentRenderer::NAME }
+            - { name: kernel.fragment_renderer, alias: !php/const Ibexa\Bundle\Core\Fragment\DirectFragmentRenderer::NAME }
 
     ezpublish.param_converter.content:
-        class: eZ\Bundle\EzPublishCoreBundle\Converter\ContentParamConverter
+        class: Ibexa\Bundle\Core\Converter\ContentParamConverter
         arguments:
             - "@ezpublish.siteaccessaware.service.content"
         tags:
             - { name: request.param_converter, priority: "%ezpublish.param_converter.content.priority%", converter: ez_content_converter }
 
     ezpublish.param_converter.location:
-        class: eZ\Bundle\EzPublishCoreBundle\Converter\LocationParamConverter
+        class: Ibexa\Bundle\Core\Converter\LocationParamConverter
         arguments:
             - "@ezpublish.siteaccessaware.service.location"
         tags:
             - { name: request.param_converter, priority: "%ezpublish.param_converter.location.priority%", converter: ez_location_converter }
 
     ezpublish.exception_listener:
-        class: eZ\Bundle\EzPublishCoreBundle\EventListener\ExceptionListener
+        class: Ibexa\Bundle\Core\EventListener\ExceptionListener
         arguments: ["@translator"]
         tags:
             - { name: kernel.event_subscriber }
 
     ezpublish.query_type.registry:
-        class: eZ\Publish\Core\QueryType\ArrayQueryTypeRegistry
+        class: Ibexa\Core\QueryType\ArrayQueryTypeRegistry
 
-    eZ\Publish\Core\Query\QueryFactory:
+    Ibexa\Core\Query\QueryFactory:
         arguments:
             $queryTypeRegistry: '@ezpublish.query_type.registry'
 
-    eZ\Publish\Core\Query\QueryFactoryInterface:
-        alias: eZ\Publish\Core\Query\QueryFactory
+    Ibexa\Core\Query\QueryFactoryInterface:
+        alias: Ibexa\Core\Query\QueryFactory
 
-    eZ\Publish\Core\Pagination\Pagerfanta\AdapterFactory\SearchHitAdapterFactory:
+    Ibexa\Core\Pagination\Pagerfanta\AdapterFactory\SearchHitAdapterFactory:
         arguments:
             $searchService: '@ezpublish.api.service.search'
 
-    eZ\Publish\Core\Pagination\Pagerfanta\AdapterFactory\SearchHitAdapterFactoryInterface:
-        alias: eZ\Publish\Core\Pagination\Pagerfanta\AdapterFactory\SearchHitAdapterFactory
+    Ibexa\Core\Pagination\Pagerfanta\AdapterFactory\SearchHitAdapterFactoryInterface:
+        alias: Ibexa\Core\Pagination\Pagerfanta\AdapterFactory\SearchHitAdapterFactory
 
     ezpublish.fields_groups.list:
-        class: eZ\Publish\Core\Helper\FieldsGroups\ArrayTranslatorFieldsGroupsList
+        class: Ibexa\Core\Helper\FieldsGroups\ArrayTranslatorFieldsGroupsList
         factory: ["@ezpublish.fields_groups.list.repository_settings_factory", "build"]
         arguments:
             - "@translator"
 
     ezpublish.fields_groups.list.repository_settings_factory:
-        class: eZ\Publish\Core\Helper\FieldsGroups\RepositoryConfigFieldsGroupsListFactory
+        class: Ibexa\Core\Helper\FieldsGroups\RepositoryConfigFieldsGroupsListFactory
         arguments:
             - "@ezpublish.api.repository_configuration_provider"
 
     ezpublish.query_type_content_view_mapper:
-        class: eZ\Publish\Core\QueryType\QueryParameterContentViewQueryTypeMapper
+        class: Ibexa\Core\QueryType\QueryParameterContentViewQueryTypeMapper
         arguments:
             - "@ezpublish.query_type.registry"
 
     ezpublish.controller.query:
-        class: eZ\Publish\Core\MVC\Symfony\Controller\Content\QueryController
+        class: Ibexa\Core\MVC\Symfony\Controller\Content\QueryController
         arguments:
             - "@ezpublish.query_type_content_view_mapper"
             - "@ezpublish.api.service.search"
         tags:
             - { name: controller.service_arguments }
 
-    eZ\Publish\Core\MVC\Symfony\Controller\QueryRenderController:
+    Ibexa\Core\MVC\Symfony\Controller\QueryRenderController:
         arguments:
-            $queryFactory: '@eZ\Publish\Core\Query\QueryFactoryInterface'
-            $searchHitAdapterFactory: '@eZ\Publish\Core\Pagination\Pagerfanta\AdapterFactory\SearchHitAdapterFactoryInterface'
+            $queryFactory: '@Ibexa\Core\Query\QueryFactoryInterface'
+            $searchHitAdapterFactory: '@Ibexa\Core\Pagination\Pagerfanta\AdapterFactory\SearchHitAdapterFactoryInterface'
         tags:
             - { name: controller.service_arguments }
 
@@ -253,11 +253,11 @@ services:
         public: true
 
     ez_query_render:
-        alias: 'eZ\Publish\Core\MVC\Symfony\Controller\QueryRenderController'
+        alias: 'Ibexa\Core\MVC\Symfony\Controller\QueryRenderController'
         public: true
 
     ezplatform.core.jms_translation.catalog_mapper_file_writer:
-        class: eZ\Publish\Core\MVC\Symfony\Translation\CatalogueMapperFileWriter
+        class: Ibexa\Core\MVC\Symfony\Translation\CatalogueMapperFileWriter
         decorates: jms_translation.file_writer
         arguments:
             - "@ezplatform.core.jms_translation.catalog_mapper_file_writer.inner"
@@ -265,64 +265,64 @@ services:
         public: false
 
     ezplatform.core.translation.extractor.fieldtypes:
-        class: eZ\Publish\Core\MVC\Symfony\Translation\FieldTypesTranslationExtractor
+        class: Ibexa\Core\MVC\Symfony\Translation\FieldTypesTranslationExtractor
         arguments:
-            - '@eZ\Publish\Core\FieldType\FieldTypeRegistry'
+            - '@Ibexa\Core\FieldType\FieldTypeRegistry'
         tags:
             - { name: jms_translation.extractor, alias: ez_fieldtypes }
 
     ezplatform.core.translation.file_visitor.exception_message_template:
         parent: jms_translation.extractor.file.default_php_extractor
-        class: eZ\Publish\Core\MVC\Symfony\Translation\ExceptionMessageTemplateFileVisitor
+        class: Ibexa\Core\MVC\Symfony\Translation\ExceptionMessageTemplateFileVisitor
         tags:
             - { name: jms_translation.file_visitor, alias: ez_exception_message_template }
 
     ezplatform.core.translation.file_visitor.translatable_exceptions:
         parent: jms_translation.extractor.file.default_php_extractor
-        class: eZ\Publish\Core\MVC\Symfony\Translation\TranslatableExceptionsFileVisitor
+        class: Ibexa\Core\MVC\Symfony\Translation\TranslatableExceptionsFileVisitor
         tags:
             - { name: jms_translation.file_visitor, alias: ez_translatable_exception }
 
     ezplatform.core.translation.file_visitor.validation_errors:
         parent: jms_translation.extractor.file.default_php_extractor
-        class: eZ\Publish\Core\MVC\Symfony\Translation\ValidationErrorFileVisitor
+        class: Ibexa\Core\MVC\Symfony\Translation\ValidationErrorFileVisitor
         tags:
             - { name: jms_translation.file_visitor, alias: ez_validation_error }
 
     ezplatform.core.translation.event_subscriber.crowdin_request_locale:
-        class: eZ\Bundle\EzPublishCoreBundle\EventSubscriber\CrowdinRequestLocaleSubscriber
+        class: Ibexa\Bundle\Core\EventSubscriber\CrowdinRequestLocaleSubscriber
         tags:
             - {name: kernel.event_subscriber}
 
     ezplatform.core.command.delete_content_translation:
-        class: eZ\Bundle\EzPublishCoreBundle\Command\DeleteContentTranslationCommand
+        class: Ibexa\Bundle\Core\Command\DeleteContentTranslationCommand
         arguments:
             - '@ezpublish.api.repository'
         tags:
             - { name: console.command }
 
     ezplatform.core.command.cleanup_versions:
-        class: eZ\Bundle\EzPublishCoreBundle\Command\CleanupVersionsCommand
+        class: Ibexa\Bundle\Core\Command\CleanupVersionsCommand
         arguments:
-            - '@eZ\Publish\Core\Event\Repository'
+            - '@Ibexa\Core\Event\Repository'
             - "@ezpublish.api.repository_configuration_provider"
             - "@ezpublish.persistence.connection"
         tags:
             - { name: console.command }
 
     ezplatform.core.session.handler.native_redis:
-        class: eZ\Bundle\EzPublishCoreBundle\Session\Handler\NativeSessionHandler
+        class: Ibexa\Bundle\Core\Session\Handler\NativeSessionHandler
         arguments:
          - '%session.save_path%'
          - 'redis'
 
     ezplatform.core.command.copy_subtree:
-        class: eZ\Bundle\EzPublishCoreBundle\Command\CopySubtreeCommand
+        class: Ibexa\Bundle\Core\Command\CopySubtreeCommand
         autowire: true
         autoconfigure: true
         arguments:
             $locationService: '@ezpublish.api.service.location'
-            $permissionResolver: '@eZ\Publish\API\Repository\PermissionResolver'
+            $permissionResolver: '@Ibexa\Contracts\Core\Repository\PermissionResolver'
             $userService: '@ezpublish.api.service.user'
             $contentTypeService: '@ezpublish.api.service.content_type'
             $searchService: '@ezpublish.api.service.search'
@@ -330,14 +330,14 @@ services:
             - { name: console.command }
 
     ezplatform.core.command.resize_original_images:
-        class: eZ\Bundle\EzPublishCoreBundle\Command\ResizeOriginalImagesCommand
+        class: Ibexa\Bundle\Core\Command\ResizeOriginalImagesCommand
         autowire: true
         autoconfigure: true
         arguments:
             $ioService: '@ezpublish.fieldType.ezimage.io_service.published'
             $imagine: '@liip_imagine'
             $filterManager: '@liip_imagine.filter.manager'
-            $permissionResolver: '@eZ\Publish\API\Repository\PermissionResolver'
+            $permissionResolver: '@Ibexa\Contracts\Core\Repository\PermissionResolver'
             $userService: '@ezpublish.api.service.user'
             $mimeTypes: '@mime_types'
         tags:
@@ -349,7 +349,7 @@ services:
         factory: ['@ibexa.doctrine.orm.entity_manager_factory', 'getEntityManager']
 
     ibexa.doctrine.orm.entity_manager_factory:
-        class: eZ\Bundle\EzPublishCoreBundle\Entity\EntityManagerFactory
+        class: Ibexa\Bundle\Core\Entity\EntityManagerFactory
         arguments:
             $repositoryConfigurationProvider: '@ezpublish.api.repository_configuration_provider'
             $defaultConnection: '%doctrine.default_connection%'
