--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/thumbnails.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/thumbnails.yml
@@ -4,36 +4,36 @@ services:
         autoconfigure: true
         autowire: true
 
-    eZ\Publish\Core\FieldType\Image\ImageThumbnailStrategy:
+    Ibexa\Core\FieldType\Image\ImageThumbnailStrategy:
         arguments:
-            $variationHandler: '@eZ\Publish\SPI\Variation\VariationHandler'
+            $variationHandler: '@Ibexa\Contracts\Core\Variation\VariationHandler'
             $variationName: 'medium'
 
-    eZ\Publish\Core\FieldType\Image\ImageThumbnailProxyStrategy:
-        decorates: eZ\Publish\Core\FieldType\Image\ImageThumbnailStrategy
+    Ibexa\Core\FieldType\Image\ImageThumbnailProxyStrategy:
+        decorates: Ibexa\Core\FieldType\Image\ImageThumbnailStrategy
         arguments:
             $imageThumbnailStrategy: '@.inner'
-            $proxyGenerator: '@eZ\Publish\Core\Repository\ProxyFactory\ProxyGeneratorInterface'
+            $proxyGenerator: '@Ibexa\Core\Repository\ProxyFactory\ProxyGeneratorInterface'
 
-    eZ\Publish\Core\FieldType\ImageAsset\ImageAssetThumbnailStrategy:
+    Ibexa\Core\FieldType\ImageAsset\ImageAssetThumbnailStrategy:
         lazy: true
         arguments:
-            $thumbnailStrategy: '@eZ\Publish\Core\Repository\Strategy\ContentThumbnail\ThumbnailChainStrategy'
+            $thumbnailStrategy: '@Ibexa\Core\Repository\Strategy\ContentThumbnail\ThumbnailChainStrategy'
             $contentService: '@ezpublish.api.service.content'
 
-    eZ\Publish\Core\Repository\Strategy\ContentThumbnail\Field\ContentFieldStrategy:
+    Ibexa\Core\Repository\Strategy\ContentThumbnail\Field\ContentFieldStrategy:
         arguments:
             $strategies:
-                ezimage: '@eZ\Publish\Core\FieldType\Image\ImageThumbnailStrategy'
-                ezimageasset: '@eZ\Publish\Core\FieldType\ImageAsset\ImageAssetThumbnailStrategy'
+                ezimage: '@Ibexa\Core\FieldType\Image\ImageThumbnailStrategy'
+                ezimageasset: '@Ibexa\Core\FieldType\ImageAsset\ImageAssetThumbnailStrategy'
 
-    eZ\Publish\Core\Repository\Strategy\ContentThumbnail\FirstMatchingFieldStrategy:
+    Ibexa\Core\Repository\Strategy\ContentThumbnail\FirstMatchingFieldStrategy:
         arguments:
             $fieldTypeService: '@ezpublish.api.service.field_type'
-            $contentFieldStrategy: '@eZ\Publish\Core\Repository\Strategy\ContentThumbnail\Field\ContentFieldStrategy'
+            $contentFieldStrategy: '@Ibexa\Core\Repository\Strategy\ContentThumbnail\Field\ContentFieldStrategy'
         tags:
             - { name: ezplatform.spi.content.thumbnail_strategy, priority: 0 }
 
-    eZ\Publish\Core\Repository\Strategy\ContentThumbnail\ThumbnailChainStrategy:
+    Ibexa\Core\Repository\Strategy\ContentThumbnail\ThumbnailChainStrategy:
         arguments:
             $strategies: !tagged_iterator ezplatform.spi.content.thumbnail_strategy
