--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/url_checker.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/url_checker.yml
@@ -1,6 +1,6 @@
 services:
     ezpublish.url_checker:
-        class: 'eZ\Bundle\EzPublishCoreBundle\URLChecker\URLChecker'
+        class: 'Ibexa\Bundle\Core\URLChecker\URLChecker'
         arguments:
             - '@ezpublish.api.service.inner_url'
             - '@ezpublish.url_checker.handler_registry'
@@ -9,7 +9,7 @@ services:
         lazy: true
 
     ezpublish.url_checker.handler_registry:
-        class: 'eZ\Bundle\EzPublishCoreBundle\URLChecker\URLHandlerRegistry'
+        class: 'Ibexa\Bundle\Core\URLChecker\URLHandlerRegistry'
 
     ezpublish.url_checker.handler.base:
         abstract: true
@@ -19,7 +19,7 @@ services:
             - ['setLogger', ['@?logger']]
 
     ezpublish.url_checker.handler.http:
-        class: 'eZ\Bundle\EzPublishCoreBundle\URLChecker\Handler\HTTPHandler'
+        class: 'Ibexa\Bundle\Core\URLChecker\Handler\HTTPHandler'
         parent: ezpublish.url_checker.handler.base
         arguments:
             $configResolver: '@ezpublish.config.resolver'
@@ -28,7 +28,7 @@ services:
             - { name: ezpublish.url_handler, scheme: http }
 
     ezpublish.url_checker.handler.https:
-        class: 'eZ\Bundle\EzPublishCoreBundle\URLChecker\Handler\HTTPHandler'
+        class: 'Ibexa\Bundle\Core\URLChecker\Handler\HTTPHandler'
         parent: ezpublish.url_checker.handler.base
         arguments:
             $configResolver: '@ezpublish.config.resolver'
@@ -37,7 +37,7 @@ services:
             - { name: ezpublish.url_handler, scheme: https }
 
     ezpublish.url_checker.handler.mailto:
-        class: 'eZ\Bundle\EzPublishCoreBundle\URLChecker\Handler\MailToHandler'
+        class: 'Ibexa\Bundle\Core\URLChecker\Handler\MailToHandler'
         parent: ezpublish.url_checker.handler.base
         arguments:
             $configResolver: '@ezpublish.config.resolver'
