--- a/eZ/Bundle/EzPublishDebugBundle/Resources/config/services.yml
+++ b/eZ/Bundle/EzPublishDebugBundle/Resources/config/services.yml
@@ -1,6 +1,6 @@
 services:
     ezpublish_debug.data_collector:
-        class: eZ\Bundle\EzPublishDebugBundle\Collector\EzPublishCoreCollector
+        class: Ibexa\Bundle\Debug\Collector\EzPublishCoreCollector
         tags:
             -
                 name: data_collector
@@ -8,7 +8,7 @@ services:
                 id: "ezpublish.debug.toolbar"
 
     ezpublish_debug.siteaccess_collector:
-        class: eZ\Bundle\EzPublishDebugBundle\Collector\SiteAccessCollector
+        class: Ibexa\Bundle\Debug\Collector\SiteAccessCollector
         tags:
             -
                 name: ezpublish_data_collector
@@ -17,7 +17,7 @@ services:
                 toolbarTemplate: '@EzPublishDebug/Profiler/siteaccess/toolbar.html.twig'
 
     ezpublish_debug.persistence_collector:
-        class: eZ\Bundle\EzPublishDebugBundle\Collector\PersistenceCacheCollector
+        class: Ibexa\Bundle\Debug\Collector\PersistenceCacheCollector
         arguments: ["@ezpublish.spi.persistence.cache.persistenceLogger"]
         tags:
             -
