--- a/eZ/Publish/Core/settings/fieldtype_services.yml
+++ b/eZ/Publish/Core/settings/fieldtype_services.yml
@@ -5,14 +5,14 @@ services:
 
     # Custom IOService with a proxy that handles the legacy prefix (images-versioned)
     ezpublish.fieldType.ezimage.io_service:
-        class: eZ\Publish\Core\FieldType\Image\IO\Legacy
+        class: Ibexa\Core\FieldType\Image\IO\Legacy
         arguments:
             - "@ezpublish.fieldType.ezimage.io_service.published"
             - "@ezpublish.fieldType.ezimage.io_service.draft"
             - "@ezpublish.fieldType.ezimage.io_service.options_provider"
 
     ezpublish.fieldType.ezimage.io_service.options_provider:
-        class: eZ\Publish\Core\FieldType\Image\IO\OptionsProvider
+        class: Ibexa\Core\FieldType\Image\IO\OptionsProvider
         arguments:
             $configResolver: '@ezpublish.config.resolver'
 
@@ -28,10 +28,10 @@ services:
             - [ setPrefix, [ "%image_draft_storage_prefix%" ] ]
 
     ezpublish.fieldType.ezimage.pathGenerator:
-        class: eZ\Publish\Core\FieldType\Image\PathGenerator\LegacyPathGenerator
+        class: Ibexa\Core\FieldType\Image\PathGenerator\LegacyPathGenerator
 
-    eZ\Publish\Core\FieldType\Image\NullAliasCleaner: ~
-    eZ\Publish\Core\FieldType\Image\AliasCleanerInterface: '@eZ\Publish\Core\FieldType\Image\NullAliasCleaner'
+    Ibexa\Core\FieldType\Image\NullAliasCleaner: ~
+    Ibexa\Core\FieldType\Image\AliasCleanerInterface: '@Ibexa\Core\FieldType\Image\NullAliasCleaner'
 
     # BinaryFile
     ezpublish.fieldType.ezbinaryfile.io_service:
@@ -40,32 +40,32 @@ services:
             - [ setPrefix, [ "%binaryfile_storage_prefix%" ] ]
 
     ezpublish.fieldType.ezbinaryfile.pathGenerator:
-        class: eZ\Publish\Core\FieldType\BinaryBase\PathGenerator\LegacyPathGenerator
+        class: Ibexa\Core\FieldType\BinaryBase\PathGenerator\LegacyPathGenerator
 
     ezpublish.fieldType.validator.black_list:
-        class: eZ\Publish\Core\FieldType\Validator\FileExtensionBlackListValidator
+        class: Ibexa\Core\FieldType\Validator\FileExtensionBlackListValidator
         arguments:
             - '@ezpublish.config.resolver'
 
     ezpublish.fieldType.validator.image:
-        class: eZ\Publish\Core\FieldType\Validator\ImageValidator
+        class: Ibexa\Core\FieldType\Validator\ImageValidator
 
     # Symfony 3.4+ service definitions:
-    eZ\Publish\Core\FieldType\ImageAsset\AssetMapper:
+    Ibexa\Core\FieldType\ImageAsset\AssetMapper:
         arguments:
             $contentService: '@ezpublish.api.service.content'
             $locationService: '@ezpublish.api.service.location'
             $contentTypeService: '@ezpublish.api.service.content_type'
             $configResolver: '@ezpublish.config.resolver'
 
-    eZ\Publish\Core\FieldType\FieldTypeRegistry: ~
+    Ibexa\Core\FieldType\FieldTypeRegistry: ~
 
-    eZ\Publish\Core\Repository\User\PasswordHashService: ~
+    Ibexa\Core\Repository\User\PasswordHashService: ~
 
-    eZ\Publish\API\Repository\PasswordHashService:
-        alias: eZ\Publish\Core\Repository\User\PasswordHashService
+    Ibexa\Contracts\Core\Repository\PasswordHashService:
+        alias: Ibexa\Core\Repository\User\PasswordHashService
 
-    eZ\Publish\Core\Repository\User\PasswordValidator: ~
+    Ibexa\Core\Repository\User\PasswordValidator: ~
 
-    eZ\Publish\Core\Repository\User\PasswordValidatorInterface:
-        alias: eZ\Publish\Core\Repository\User\PasswordValidator
+    Ibexa\Core\Repository\User\PasswordValidatorInterface:
+        alias: Ibexa\Core\Repository\User\PasswordValidator
