--- a/eZ/Publish/Core/settings/indexable_fieldtypes.yml
+++ b/eZ/Publish/Core/settings/indexable_fieldtypes.yml
@@ -1,123 +1,123 @@
 parameters:
     # @todo drop once core dependencies stop relying on this parameter
-    ezpublish.fieldType.indexable.unindexed.class: eZ\Publish\Core\FieldType\Unindexed
+    ezpublish.fieldType.indexable.unindexed.class: Ibexa\Core\FieldType\Unindexed
 
 services:
     ezpublish.fieldType.indexable.ezkeyword:
-        class: eZ\Publish\Core\FieldType\Keyword\SearchField
+        class: Ibexa\Core\FieldType\Keyword\SearchField
         tags:
             - {name: ezplatform.field_type.indexable, alias: ezkeyword}
 
     ezpublish.fieldType.indexable.ezauthor:
-        class: eZ\Publish\Core\FieldType\Author\SearchField
+        class: Ibexa\Core\FieldType\Author\SearchField
         tags:
             - {name: ezplatform.field_type.indexable, alias: ezauthor}
 
     ezpublish.fieldType.indexable.ezstring:
-        class: eZ\Publish\Core\FieldType\TextLine\SearchField
+        class: Ibexa\Core\FieldType\TextLine\SearchField
         tags:
             - {name: ezplatform.field_type.indexable, alias: ezstring}
 
     ezpublish.fieldType.indexable.ezgmaplocation:
-        class: eZ\Publish\Core\FieldType\MapLocation\SearchField
+        class: Ibexa\Core\FieldType\MapLocation\SearchField
         tags:
             - {name: ezplatform.field_type.indexable, alias: ezgmaplocation}
 
     ezpublish.fieldType.indexable.ezcountry:
-        class: eZ\Publish\Core\FieldType\Country\SearchField
+        class: Ibexa\Core\FieldType\Country\SearchField
         arguments:
             - "%ezpublish.fieldType.ezcountry.data%"
         tags:
             - {name: ezplatform.field_type.indexable, alias: ezcountry}
 
     ezpublish.fieldType.indexable.ezdate:
-        class: eZ\Publish\Core\FieldType\Date\SearchField
+        class: Ibexa\Core\FieldType\Date\SearchField
         tags:
             - {name: ezplatform.field_type.indexable, alias: ezdate}
 
     ezpublish.fieldType.indexable.ezinteger:
-        class: eZ\Publish\Core\FieldType\Integer\SearchField
+        class: Ibexa\Core\FieldType\Integer\SearchField
         tags:
             - {name: ezplatform.field_type.indexable, alias: ezinteger}
 
     ezpublish.fieldType.indexable.ezfloat:
-        class: eZ\Publish\Core\FieldType\Float\SearchField
+        class: Ibexa\Core\FieldType\Float\SearchField
         tags:
             - {name: ezplatform.field_type.indexable, alias: ezfloat}
 
     ezpublish.fieldType.indexable.ezemail:
-        class: eZ\Publish\Core\FieldType\EmailAddress\SearchField
+        class: Ibexa\Core\FieldType\EmailAddress\SearchField
         tags:
             - {name: ezplatform.field_type.indexable, alias: ezemail}
 
     ezpublish.fieldType.indexable.ezimage:
-        class: eZ\Publish\Core\FieldType\Image\SearchField
+        class: Ibexa\Core\FieldType\Image\SearchField
         tags:
             - {name: ezplatform.field_type.indexable, alias: ezimage}
 
     ezpublish.fieldType.indexable.ezmedia:
-        class: eZ\Publish\Core\FieldType\Media\SearchField
+        class: Ibexa\Core\FieldType\Media\SearchField
         tags:
             - {name: ezplatform.field_type.indexable, alias: ezmedia}
 
     ezpublish.fieldType.indexable.ezbinaryfile:
-        class: eZ\Publish\Core\FieldType\BinaryFile\SearchField
+        class: Ibexa\Core\FieldType\BinaryFile\SearchField
         tags:
             - {name: ezplatform.field_type.indexable, alias: ezbinaryfile}
 
     ezpublish.fieldType.indexable.eztime:
-        class: eZ\Publish\Core\FieldType\Time\SearchField
+        class: Ibexa\Core\FieldType\Time\SearchField
         tags:
             - {name: ezplatform.field_type.indexable, alias: eztime}
 
     ezpublish.fieldType.indexable.eztext:
-        class: eZ\Publish\Core\FieldType\TextBlock\SearchField
+        class: Ibexa\Core\FieldType\TextBlock\SearchField
         tags:
             - {name: ezplatform.field_type.indexable, alias: eztext}
 
     ezpublish.fieldType.indexable.ezboolean:
-        class: eZ\Publish\Core\FieldType\Checkbox\SearchField
+        class: Ibexa\Core\FieldType\Checkbox\SearchField
         tags:
             - {name: ezplatform.field_type.indexable, alias: ezboolean}
 
     ezpublish.fieldType.indexable.ezdatetime:
-        class: eZ\Publish\Core\FieldType\DateAndTime\SearchField
+        class: Ibexa\Core\FieldType\DateAndTime\SearchField
         tags:
             - {name: ezplatform.field_type.indexable, alias: ezdatetime}
 
     ezpublish.fieldType.indexable.ezisbn:
-        class: eZ\Publish\Core\FieldType\ISBN\SearchField
+        class: Ibexa\Core\FieldType\ISBN\SearchField
         tags:
             - {name: ezplatform.field_type.indexable, alias: ezisbn}
 
     ezpublish.fieldType.indexable.ezobjectrelation:
-        class: eZ\Publish\Core\FieldType\Relation\SearchField
+        class: Ibexa\Core\FieldType\Relation\SearchField
         tags:
             - {name: ezplatform.field_type.indexable, alias: ezobjectrelation}
 
     ezpublish.fieldType.indexable.ezselection:
-        class: eZ\Publish\Core\FieldType\Selection\SearchField
+        class: Ibexa\Core\FieldType\Selection\SearchField
         tags:
             - {name: ezplatform.field_type.indexable, alias: ezselection}
 
     ezpublish.fieldType.indexable.ezobjectrelationlist:
-        class: eZ\Publish\Core\FieldType\RelationList\SearchField
+        class: Ibexa\Core\FieldType\RelationList\SearchField
         tags:
             - {name: ezplatform.field_type.indexable, alias: ezobjectrelationlist}
 
     ezpublish.fieldType.indexable.ezurl:
-        class: eZ\Publish\Core\FieldType\Url\SearchField
+        class: Ibexa\Core\FieldType\Url\SearchField
         tags:
             - {name: ezplatform.field_type.indexable, alias: ezurl}
 
     ezpublish.fieldType.indexable.ezimageasset:
-        class: eZ\Publish\Core\FieldType\ImageAsset\SearchField
+        class: Ibexa\Core\FieldType\ImageAsset\SearchField
         tags:
             - {name: ezplatform.field_type.indexable, alias: ezimageasset}
 
 
     ezpublish.fieldType.indexable.unindexed:
-        class: eZ\Publish\Core\FieldType\Unindexed
+        class: Ibexa\Core\FieldType\Unindexed
         tags:
             - {name: ezplatform.field_type.indexable, alias: ezuser}
             - {name: ezplatform.field_type.indexable, alias: ezenum}
