--- a/eZ/Publish/Core/settings/limitations/language.yml
+++ b/eZ/Publish/Core/settings/limitations/language.yml
@@ -4,9 +4,9 @@ services:
         autoconfigure: true
         public: false
     _instanceof:
-        eZ\Publish\Core\Limitation\LanguageLimitation\VersionTargetEvaluator:
+        Ibexa\Core\Limitation\LanguageLimitation\VersionTargetEvaluator:
             tags:
                 - { name: ezplatform.limitation.language.version_target_evaluator }
 
-    eZ\Publish\Core\Limitation\LanguageLimitation\:
+    Ibexa\Core\Core\Limitation\LanguageLimitation\:
         resource: '../../Limitation/LanguageLimitation/*'
