--- a/eZ/Publish/Core/settings/notification.yml
+++ b/eZ/Publish/Core/settings/notification.yml
@@ -1,10 +1,10 @@
 services:
-    eZ\Publish\Core\Notification\Renderer\Registry:
+    Ibexa\Core\Notification\Renderer\Registry:
         autowire: true
         autoconfigure: false
         public: false
 
-    notification.renderer.registry: '@eZ\Publish\Core\Notification\Renderer\Registry'
+    notification.renderer.registry: '@Ibexa\Core\Notification\Renderer\Registry'
 
-    eZ\Publish\API\Repository\NotificationService:
-        alias: eZ\Publish\Core\Event\NotificationService
+    Ibexa\Contracts\Core\Repository\NotificationService:
+        alias: Ibexa\Core\Event\NotificationService
