--- a/eZ/Publish/Core/settings/repository.yml
+++ b/eZ/Publish/Core/settings/repository.yml
@@ -1,73 +1,73 @@
 services:
     # API Aliases
     ezpublish.api.repository:
-        alias: eZ\Publish\Core\Repository\SiteAccessAware\Repository
+        alias: Ibexa\Core\Repository\SiteAccessAware\Repository
         public: true
 
     ezpublish.api.service.bookmark:
-        alias: eZ\Publish\Core\Event\BookmarkService
+        alias: Ibexa\Core\Event\BookmarkService
         public: true
 
     ezpublish.api.service.content:
-        alias: eZ\Publish\Core\Repository\SiteAccessAware\ContentService
+        alias: Ibexa\Core\Repository\SiteAccessAware\ContentService
         public: true
 
     ezpublish.api.service.content_type:
-        alias: eZ\Publish\Core\Repository\SiteAccessAware\ContentTypeService
+        alias: Ibexa\Core\Repository\SiteAccessAware\ContentTypeService
         public: true
 
     ezpublish.api.service.field_type:
-        alias: eZ\Publish\Core\Event\FieldTypeService
+        alias: Ibexa\Core\Event\FieldTypeService
         public: true
 
     ezpublish.api.service.role:
-        alias: eZ\Publish\Core\Event\RoleService
+        alias: Ibexa\Core\Event\RoleService
         public: true
 
     ezpublish.api.service.object_state:
-        alias: eZ\Publish\Core\Repository\SiteAccessAware\ObjectStateService
+        alias: Ibexa\Core\Repository\SiteAccessAware\ObjectStateService
         public: true
 
     ezpublish.api.service.url_wildcard:
-        alias: eZ\Publish\Core\Event\URLWildcardService
+        alias: Ibexa\Core\Event\URLWildcardService
         public: true
 
     ezpublish.api.service.url_alias:
-        alias: eZ\Publish\Core\Repository\SiteAccessAware\URLAliasService
+        alias: Ibexa\Core\Repository\SiteAccessAware\URLAliasService
         public: true
 
     ezpublish.api.service.user:
-        alias: eZ\Publish\Core\Repository\SiteAccessAware\UserService
+        alias: Ibexa\Core\Repository\SiteAccessAware\UserService
         public: true
 
     ezpublish.api.service.search:
-        alias: eZ\Publish\Core\Repository\SiteAccessAware\SearchService
+        alias: Ibexa\Core\Repository\SiteAccessAware\SearchService
         public: true
 
     ezpublish.api.service.section:
-        alias: eZ\Publish\Core\Repository\SiteAccessAware\SectionService
+        alias: Ibexa\Core\Repository\SiteAccessAware\SectionService
         public: true
 
     ezpublish.api.service.trash:
-        alias: eZ\Publish\Core\Repository\SiteAccessAware\TrashService
+        alias: Ibexa\Core\Repository\SiteAccessAware\TrashService
         public: true
 
     ezpublish.api.service.location:
-        alias: eZ\Publish\Core\Repository\SiteAccessAware\LocationService
+        alias: Ibexa\Core\Repository\SiteAccessAware\LocationService
         public: true
 
     ezpublish.api.service.language:
-        alias: eZ\Publish\Core\Repository\SiteAccessAware\LanguageService
+        alias: Ibexa\Core\Repository\SiteAccessAware\LanguageService
         public: true
 
     ezpublish.api.service.url:
-        alias: eZ\Publish\Core\Event\URLService
+        alias: Ibexa\Core\Event\URLService
         public: true
 
     ezpublish.api.service.notification:
-        alias: eZ\Publish\Core\Repository\SiteAccessAware\NotificationService
+        alias: Ibexa\Core\Repository\SiteAccessAware\NotificationService
         public: true
 
     ezpublish.api.service.user_preference:
-        alias: eZ\Publish\Core\Event\UserPreferenceService
+        alias: Ibexa\Core\Event\UserPreferenceService
         public: true
