--- a/eZ/Publish/Core/settings/repository/inner.yml
+++ b/eZ/Publish/Core/settings/repository/inner.yml
@@ -2,253 +2,253 @@ parameters:
     ezplatform.kernel.proxy_cache_dir: 'var/cache/repository/proxy'
 
     # intentionally defined class parameter to be used by the Repository Factory
-    ezpublish.api.inner_repository.class: eZ\Publish\Core\Repository\Repository
+    ezpublish.api.inner_repository.class: Ibexa\Core\Repository\Repository
 services:
     ezpublish.api.repository.factory:
-        class: eZ\Publish\Core\Base\Container\ApiLoader\RepositoryFactory
+        class: Ibexa\Core\Base\Container\ApiLoader\RepositoryFactory
         arguments:
             - "%ezpublish.api.inner_repository.class%"
             - "%ezpublish.api.role.policy_map%"
-            - '@eZ\Publish\API\Repository\LanguageResolver'
+            - '@Ibexa\Contracts\Core\Repository\LanguageResolver'
         calls:
             - [setContainer, ["@service_container"]]
 
     ezpublish.api.inner_repository:
-        class: eZ\Publish\Core\Repository\Repository
+        class: Ibexa\Core\Repository\Repository
         factory: ["@ezpublish.api.repository.factory", buildRepository]
         arguments:
             - "@ezpublish.api.persistence_handler"
             - "@ezpublish.spi.search"
             - '@ezpublish.search.background_indexer'
             - '@ezpublish.repository.relation_processor'
-            - '@eZ\Publish\Core\FieldType\FieldTypeRegistry'
-            - '@eZ\Publish\Core\Repository\User\PasswordHashService'
-            - '@eZ\Publish\Core\Repository\Strategy\ContentThumbnail\ThumbnailChainStrategy'
-            - '@eZ\Publish\Core\Repository\ProxyFactory\ProxyDomainMapperFactory'
-            - '@eZ\Publish\Core\Repository\Mapper\ContentDomainMapper'
-            - '@eZ\Publish\Core\Repository\Mapper\ContentTypeDomainMapper'
-            - '@eZ\Publish\Core\Repository\Mapper\RoleDomainMapper'
-            - '@eZ\Publish\Core\Repository\Mapper\ContentMapper'
-            - '@eZ\Publish\SPI\Repository\Validator\ContentValidator'
-            - '@eZ\Publish\Core\Repository\Permission\LimitationService'
-            - '@eZ\Publish\API\Repository\PermissionService'
-            - '@eZ\Publish\SPI\Persistence\Filter\Content\Handler'
-            - '@eZ\Publish\SPI\Persistence\Filter\Location\Handler'
-            - '@eZ\Publish\Core\Repository\User\PasswordValidatorInterface'
+            - '@Ibexa\Core\FieldType\FieldTypeRegistry'
+            - '@Ibexa\Core\Repository\User\PasswordHashService'
+            - '@Ibexa\Core\Repository\Strategy\ContentThumbnail\ThumbnailChainStrategy'
+            - '@Ibexa\Core\Repository\ProxyFactory\ProxyDomainMapperFactory'
+            - '@Ibexa\Core\Repository\Mapper\ContentDomainMapper'
+            - '@Ibexa\Core\Repository\Mapper\ContentTypeDomainMapper'
+            - '@Ibexa\Core\Repository\Mapper\RoleDomainMapper'
+            - '@Ibexa\Core\Repository\Mapper\ContentMapper'
+            - '@Ibexa\Contracts\Core\Repository\Validator\ContentValidator'
+            - '@Ibexa\Core\Repository\Permission\LimitationService'
+            - '@Ibexa\Contracts\Core\Repository\PermissionService'
+            - '@Ibexa\Contracts\Core\Persistence\Filter\Content\Handler'
+            - '@Ibexa\Contracts\Core\Persistence\Filter\Location\Handler'
+            - '@Ibexa\Core\Repository\User\PasswordValidatorInterface'
             - '%languages%'
 
     ezpublish.api.service.inner_content:
-        class: eZ\Publish\Core\Repository\ContentService
+        class: Ibexa\Core\Repository\ContentService
         factory: ["@ezpublish.api.inner_repository", getContentService]
         lazy: true
 
     ezpublish.api.service.inner_content_type:
-        class: eZ\Publish\Core\Repository\ContentTypeService
+        class: Ibexa\Core\Repository\ContentTypeService
         factory: ["@ezpublish.api.inner_repository", getContentTypeService]
         lazy: true
 
     ezpublish.api.service.inner_field_type:
-        class: eZ\Publish\Core\Repository\FieldTypeService
+        class: Ibexa\Core\Repository\FieldTypeService
         factory: ["@ezpublish.api.inner_repository", getFieldTypeService]
         lazy: true
 
     ezpublish.api.service.inner_role:
-        class: eZ\Publish\Core\Repository\RoleService
+        class: Ibexa\Core\Repository\RoleService
         factory: ["@ezpublish.api.inner_repository", getRoleService]
         lazy: true
 
     ezpublish.api.service.inner_object_state:
-        class: eZ\Publish\Core\Repository\ObjectStateService
+        class: Ibexa\Core\Repository\ObjectStateService
         factory: ["@ezpublish.api.inner_repository", getObjectStateService]
         lazy: true
 
     ezpublish.api.service.inner_url_wildcard:
-        class: eZ\Publish\Core\Repository\URLWildcardService
+        class: Ibexa\Core\Repository\URLWildcardService
         factory: ["@ezpublish.api.inner_repository", getURLWildcardService]
         lazy: true
 
     ezpublish.api.service.inner_url_alias:
-        class: eZ\Publish\Core\Repository\URLAliasService
+        class: Ibexa\Core\Repository\URLAliasService
         factory: ["@ezpublish.api.inner_repository", getURLAliasService]
         lazy: true
 
     ezpublish.api.service.inner_user:
-        class: eZ\Publish\Core\Repository\UserService
+        class: Ibexa\Core\Repository\UserService
         factory: ["@ezpublish.api.inner_repository", getUserService]
         calls:
             - [setLogger, ["@?logger"]]
         lazy: true
 
     ezpublish.api.service.inner_search:
-        class: eZ\Publish\Core\Repository\SearchService
+        class: Ibexa\Core\Repository\SearchService
         factory: ["@ezpublish.api.inner_repository", getSearchService]
         lazy: true
 
     ezpublish.api.service.inner_section:
-        class: eZ\Publish\Core\Repository\SectionService
+        class: Ibexa\Core\Repository\SectionService
         factory: ["@ezpublish.api.inner_repository", getSectionService]
         lazy: true
 
     ezpublish.api.service.inner_trash:
-        class: eZ\Publish\Core\Repository\TrashService
+        class: Ibexa\Core\Repository\TrashService
         factory: ["@ezpublish.api.inner_repository", getTrashService]
         lazy: true
 
     ezpublish.api.service.inner_location:
-        class: eZ\Publish\Core\Repository\LocationService
+        class: Ibexa\Core\Repository\LocationService
         factory: ["@ezpublish.api.inner_repository", getLocationService]
         lazy: true
 
     ezpublish.api.service.inner_language:
-        class: eZ\Publish\Core\Repository\LanguageService
+        class: Ibexa\Core\Repository\LanguageService
         factory: ["@ezpublish.api.inner_repository", getContentLanguageService]
         lazy: true
 
     ezpublish.api.service.inner_url:
-        class: eZ\Publish\Core\Repository\URLService
+        class: Ibexa\Core\Repository\URLService
         factory: ["@ezpublish.api.inner_repository", getUrlService]
         lazy: true
 
     ezpublish.api.service.inner_bookmark:
-        class: eZ\Publish\Core\Repository\BookmarkService
+        class: Ibexa\Core\Repository\BookmarkService
         factory: ["@ezpublish.api.inner_repository", getBookmarkService]
         lazy: true
 
     ezpublish.api.service.inner_notification:
-        class: eZ\Publish\Core\Repository\NotificationService
+        class: Ibexa\Core\Repository\NotificationService
         factory: ["@ezpublish.api.inner_repository", getNotificationService]
         lazy: true
 
     ezpublish.api.service.inner_user_preference:
-        class: eZ\Publish\Core\Repository\UserPreferenceService
+        class: Ibexa\Core\Repository\UserPreferenceService
         factory: ["@ezpublish.api.inner_repository", getUserPreferenceService]
         lazy: true
 
-    eZ\Publish\Core\Repository\SettingService:
+    Ibexa\Core\Repository\SettingService:
         arguments:
-            $settingHandler: '@eZ\Publish\Core\Persistence\Cache\SettingHandler'
-            $permissionResolver: '@eZ\Publish\API\Repository\PermissionResolver'
+            $settingHandler: '@Ibexa\Core\Persistence\Cache\SettingHandler'
+            $permissionResolver: '@Ibexa\Contracts\Core\Repository\PermissionResolver'
 
     # Factories
     ezpublish.search.background_indexer:
-        class: eZ\Publish\Core\Search\Common\BackgroundIndexer\NullIndexer
+        class: Ibexa\Core\Search\Common\BackgroundIndexer\NullIndexer
 
     ezpublish.repository.relation_processor:
-        class: eZ\Publish\Core\Repository\Helper\RelationProcessor
+        class: Ibexa\Core\Repository\Helper\RelationProcessor
         arguments:
             - '@ezpublish.api.persistence_handler'
         calls:
             - ['setLogger', ['@?logger']]
 
     # Domain mappers and proxies
-    eZ\Publish\Core\Repository\ProxyFactory\ProxyGenerator:
+    Ibexa\Core\Repository\ProxyFactory\ProxyGenerator:
         arguments:
             $proxyCacheDir: '%ezplatform.kernel.proxy_cache_dir%'
 
-    eZ\Publish\Core\Repository\ProxyFactory\ProxyGeneratorInterface:
-        alias: 'eZ\Publish\Core\Repository\ProxyFactory\ProxyGenerator'
+    Ibexa\Core\Repository\ProxyFactory\ProxyGeneratorInterface:
+        alias: 'Ibexa\Core\Repository\ProxyFactory\ProxyGenerator'
 
-    eZ\Publish\Core\Repository\ProxyFactory\ProxyDomainMapperFactory:
+    Ibexa\Core\Repository\ProxyFactory\ProxyDomainMapperFactory:
         arguments:
-            $proxyGenerator: '@eZ\Publish\Core\Repository\ProxyFactory\ProxyGeneratorInterface'
+            $proxyGenerator: '@Ibexa\Core\Repository\ProxyFactory\ProxyGeneratorInterface'
 
-    eZ\Publish\Core\Repository\ProxyFactory\ProxyDomainMapper:
-        factory: ['@eZ\Publish\Core\Repository\ProxyFactory\ProxyDomainMapperFactory', 'create']
+    Ibexa\Core\Repository\ProxyFactory\ProxyDomainMapper:
+        factory: ['@Ibexa\Core\Repository\ProxyFactory\ProxyDomainMapperFactory', 'create']
         arguments:
             $repository: '@ezpublish.api.inner_repository'
 
-    eZ\Publish\Core\Repository\ProxyFactory\ProxyDomainMapperInterface:
-        alias: 'eZ\Publish\Core\Repository\ProxyFactory\ProxyDomainMapper'
+    Ibexa\Core\Repository\ProxyFactory\ProxyDomainMapperInterface:
+        alias: 'Ibexa\Core\Repository\ProxyFactory\ProxyDomainMapper'
 
     # Mappers
-    eZ\Publish\Core\Repository\Mapper\ProxyAwareDomainMapper:
+    Ibexa\Core\Repository\Mapper\ProxyAwareDomainMapper:
         abstract: true
         calls:
             -   method: setProxyFactory
                 arguments:
-                    $proxyFactory: '@eZ\Publish\Core\Repository\ProxyFactory\ProxyDomainMapperInterface'
+                    $proxyFactory: '@Ibexa\Core\Repository\ProxyFactory\ProxyDomainMapperInterface'
 
-    eZ\Publish\Core\Repository\Mapper\ContentMapper:
+    Ibexa\Core\Repository\Mapper\ContentMapper:
         arguments:
             $contentLanguageHandler: '@ezpublish.spi.persistence.language_handler'
-            $fieldTypeRegistry: '@eZ\Publish\Core\FieldType\FieldTypeRegistry'
+            $fieldTypeRegistry: '@Ibexa\Core\FieldType\FieldTypeRegistry'
 
-    eZ\Publish\Core\Repository\Mapper\ContentTypeDomainMapper:
-        parent: eZ\Publish\Core\Repository\Mapper\ProxyAwareDomainMapper
+    Ibexa\Core\Repository\Mapper\ContentTypeDomainMapper:
+        parent: Ibexa\Core\Repository\Mapper\ProxyAwareDomainMapper
         arguments:
             $contentTypeHandler: '@ezpublish.spi.persistence.content_type_handler'
             $contentLanguageHandler: '@ezpublish.spi.persistence.language_handler'
-            $fieldTypeRegistry: '@eZ\Publish\Core\FieldType\FieldTypeRegistry'
+            $fieldTypeRegistry: '@Ibexa\Core\FieldType\FieldTypeRegistry'
 
-    eZ\Publish\Core\Repository\Mapper\ContentDomainMapper:
-        parent: eZ\Publish\Core\Repository\Mapper\ProxyAwareDomainMapper
+    Ibexa\Core\Repository\Mapper\ContentDomainMapper:
+        parent: Ibexa\Core\Repository\Mapper\ProxyAwareDomainMapper
         arguments:
             $contentHandler: '@ezpublish.spi.persistence.content_handler'
             $locationHandler: '@ezpublish.spi.persistence.location_handler'
             $contentTypeHandler: '@ezpublish.spi.persistence.content_type_handler'
-            $contentTypeDomainMapper: '@eZ\Publish\Core\Repository\Mapper\ContentTypeDomainMapper'
+            $contentTypeDomainMapper: '@Ibexa\Core\Repository\Mapper\ContentTypeDomainMapper'
             $contentLanguageHandler: '@ezpublish.spi.persistence.language_handler'
-            $fieldTypeRegistry: '@eZ\Publish\Core\FieldType\FieldTypeRegistry'
-            $thumbnailStrategy: '@eZ\Publish\Core\Repository\Strategy\ContentThumbnail\ThumbnailChainStrategy'
+            $fieldTypeRegistry: '@Ibexa\Core\FieldType\FieldTypeRegistry'
+            $thumbnailStrategy: '@Ibexa\Core\Repository\Strategy\ContentThumbnail\ThumbnailChainStrategy'
 
-    eZ\Publish\Core\Repository\Mapper\RoleDomainMapper:
+    Ibexa\Core\Repository\Mapper\RoleDomainMapper:
         arguments:
-            $limitationService: '@eZ\Publish\Core\Repository\Permission\LimitationService'
+            $limitationService: '@Ibexa\Core\Repository\Permission\LimitationService'
 
     # Permission-related
-    eZ\Publish\Core\Repository\Permission\LimitationService:
+    Ibexa\Core\Repository\Permission\LimitationService:
         arguments:
             $limitationTypes: !tagged_iterator { tag: ezpublish.limitationType, index_by: alias }
 
-    eZ\Publish\Core\Repository\Permission\PermissionResolver:
+    Ibexa\Core\Repository\Permission\PermissionResolver:
         arguments:
-            $roleDomainMapper: '@eZ\Publish\Core\Repository\Mapper\RoleDomainMapper'
-            $limitationService: '@eZ\Publish\Core\Repository\Permission\LimitationService'
+            $roleDomainMapper: '@Ibexa\Core\Repository\Mapper\RoleDomainMapper'
+            $limitationService: '@Ibexa\Core\Repository\Permission\LimitationService'
             $userHandler: '@ezpublish.spi.persistence.user_handler'
             $configResolver: '@ezpublish.config.resolver'
             $policyMap: '%ezpublish.api.role.policy_map%'
 
-    eZ\Publish\Core\Repository\Permission\PermissionCriterionResolver:
+    Ibexa\Core\Repository\Permission\PermissionCriterionResolver:
         arguments:
-            $innerPermissionResolver: '@eZ\Publish\Core\Repository\Permission\PermissionResolver'
-            $limitationService: '@eZ\Publish\Core\Repository\Permission\LimitationService'
+            $innerPermissionResolver: '@Ibexa\Core\Repository\Permission\PermissionResolver'
+            $limitationService: '@Ibexa\Core\Repository\Permission\LimitationService'
 
-    eZ\Publish\Core\Repository\Permission\CachedPermissionService:
+    Ibexa\Core\Repository\Permission\CachedPermissionService:
         arguments:
-            $innerPermissionResolver: '@eZ\Publish\Core\Repository\Permission\PermissionResolver'
-            $permissionCriterionResolver: '@eZ\Publish\Core\Repository\Permission\PermissionCriterionResolver'
+            $innerPermissionResolver: '@Ibexa\Core\Repository\Permission\PermissionResolver'
+            $permissionCriterionResolver: '@Ibexa\Core\Repository\Permission\PermissionCriterionResolver'
 
-    eZ\Publish\Core\Repository\Strategy\ContentValidator\ContentValidatorStrategy:
+    Ibexa\Core\Repository\Strategy\ContentValidator\ContentValidatorStrategy:
         arguments:
             $contentValidators: !tagged_iterator ezplatform.spi.content.validator
 
-    eZ\Publish\Core\Repository\Validator\ContentCreateStructValidator:
+    Ibexa\Core\Repository\Validator\ContentCreateStructValidator:
         arguments:
-            $contentMapper: '@eZ\Publish\Core\Repository\Mapper\ContentMapper'
-            $fieldTypeRegistry: '@eZ\Publish\Core\FieldType\FieldTypeRegistry'
+            $contentMapper: '@Ibexa\Core\Repository\Mapper\ContentMapper'
+            $fieldTypeRegistry: '@Ibexa\Core\FieldType\FieldTypeRegistry'
         tags:
             - ezplatform.spi.content.validator
 
-    eZ\Publish\Core\Repository\Validator\ContentUpdateStructValidator:
+    Ibexa\Core\Repository\Validator\ContentUpdateStructValidator:
         arguments:
-            $contentMapper: '@eZ\Publish\Core\Repository\Mapper\ContentMapper'
-            $fieldTypeRegistry: '@eZ\Publish\Core\FieldType\FieldTypeRegistry'
+            $contentMapper: '@Ibexa\Core\Repository\Mapper\ContentMapper'
+            $fieldTypeRegistry: '@Ibexa\Core\FieldType\FieldTypeRegistry'
             $contentLanguageHandler: '@ezpublish.spi.persistence.language_handler'
         tags:
             - ezplatform.spi.content.validator
 
-    eZ\Publish\Core\Repository\Validator\VersionValidator:
+    Ibexa\Core\Repository\Validator\VersionValidator:
         arguments:
-            $fieldTypeRegistry: '@eZ\Publish\Core\FieldType\FieldTypeRegistry'
+            $fieldTypeRegistry: '@Ibexa\Core\FieldType\FieldTypeRegistry'
         tags:
             - ezplatform.spi.content.validator
 
-    eZ\Publish\SPI\Repository\Validator\ContentValidator: '@eZ\Publish\Core\Repository\Strategy\ContentValidator\ContentValidatorStrategy'
+    Ibexa\Contracts\Core\Repository\Validator\ContentValidator: '@Ibexa\Core\Repository\Strategy\ContentValidator\ContentValidatorStrategy'
 
     # LocationResolver
-    eZ\Publish\Core\Repository\LocationResolver\PermissionAwareLocationResolver:
+    Ibexa\Core\Repository\LocationResolver\PermissionAwareLocationResolver:
         arguments:
             - '@ezpublish.api.service.location'
 
-    eZ\Publish\Core\Repository\LocationResolver\LocationResolver:
-        alias: eZ\Publish\Core\Repository\LocationResolver\PermissionAwareLocationResolver
+    Ibexa\Core\Repository\LocationResolver\LocationResolver:
+        alias: Ibexa\Core\Repository\LocationResolver\PermissionAwareLocationResolver
