--- a/eZ/Publish/Core/settings/roles.yml
+++ b/eZ/Publish/Core/settings/roles.yml
@@ -7,13 +7,13 @@ parameters:
 services:
     ## Implemented Limitations
     ezpublish.api.role.limitation_type.content_type:
-        class: eZ\Publish\Core\Limitation\ContentTypeLimitationType
+        class: Ibexa\Core\Limitation\ContentTypeLimitationType
         arguments: ["@ezpublish.api.persistence_handler"]
         tags:
             - {name: ezpublish.limitationType, alias: Class}
 
     ezpublish.api.role.limitation_type.language:
-        class: eZ\Publish\Core\Limitation\LanguageLimitationType
+        class: Ibexa\Core\Limitation\LanguageLimitationType
         arguments:
             $persistenceLanguageHandler: '@ezpublish.spi.persistence.language_handler'
             $persistenceContentHandler: '@ezpublish.spi.persistence.content_handler'
@@ -22,85 +22,85 @@ services:
             - {name: ezpublish.limitationType, alias: Language}
 
     ezpublish.api.role.limitation_type.location:
-        class: eZ\Publish\Core\Limitation\LocationLimitationType
+        class: Ibexa\Core\Limitation\LocationLimitationType
         arguments: ["@ezpublish.api.persistence_handler"]
         tags:
             - {name: ezpublish.limitationType, alias: Node}
 
     ezpublish.api.role.limitation_type.owner:
-        class: eZ\Publish\Core\Limitation\OwnerLimitationType
+        class: Ibexa\Core\Limitation\OwnerLimitationType
         arguments: ["@ezpublish.api.persistence_handler"]
         tags:
             - {name: ezpublish.limitationType, alias: Owner}
 
     ezpublish.api.role.limitation_type.parent_content_type:
-        class: eZ\Publish\Core\Limitation\ParentContentTypeLimitationType
+        class: Ibexa\Core\Limitation\ParentContentTypeLimitationType
         arguments: ["@ezpublish.api.persistence_handler"]
         tags:
             - {name: ezpublish.limitationType, alias: ParentClass}
 
     ezpublish.api.role.limitation_type.parent_depth:
-        class: eZ\Publish\Core\Limitation\ParentDepthLimitationType
+        class: Ibexa\Core\Limitation\ParentDepthLimitationType
         arguments: ["@ezpublish.api.persistence_handler"]
         tags:
             - {name: ezpublish.limitationType, alias: ParentDepth}
 
     ezpublish.api.role.limitation_type.parent_owner:
-        class: eZ\Publish\Core\Limitation\ParentOwnerLimitationType
+        class: Ibexa\Core\Limitation\ParentOwnerLimitationType
         arguments: ["@ezpublish.api.persistence_handler"]
         tags:
             - {name: ezpublish.limitationType, alias: ParentOwner}
 
     ezpublish.api.role.limitation_type.parent_group:
-        class: eZ\Publish\Core\Limitation\ParentUserGroupLimitationType
+        class: Ibexa\Core\Limitation\ParentUserGroupLimitationType
         arguments: ["@ezpublish.api.persistence_handler"]
         tags:
             - {name: ezpublish.limitationType, alias: ParentGroup}
 
     ezpublish.api.role.limitation_type.section:
-        class: eZ\Publish\Core\Limitation\SectionLimitationType
+        class: Ibexa\Core\Limitation\SectionLimitationType
         arguments: ["@ezpublish.api.persistence_handler"]
         tags:
             - {name: ezpublish.limitationType, alias: Section}
 
     ezpublish.api.role.limitation_type.new_section:
-        class: eZ\Publish\Core\Limitation\NewSectionLimitationType
+        class: Ibexa\Core\Limitation\NewSectionLimitationType
         arguments: ["@ezpublish.api.persistence_handler"]
         tags:
             - {name: ezpublish.limitationType, alias: NewSection}
 
     ezpublish.api.role.limitation_type.siteaccess:
-        class: eZ\Publish\Core\Limitation\SiteAccessLimitationType
+        class: Ibexa\Core\Limitation\SiteAccessLimitationType
         arguments: ['@ezpublish.siteaccess_service']
         tags:
             - {name: ezpublish.limitationType, alias: SiteAccess}
 
     ezpublish.api.role.limitation_type.state:
-        class: eZ\Publish\Core\Limitation\ObjectStateLimitationType
+        class: Ibexa\Core\Limitation\ObjectStateLimitationType
         arguments: ["@ezpublish.api.persistence_handler"]
         tags:
             - {name: ezpublish.limitationType, alias: State}
 
     ezpublish.api.role.limitation_type.new_state:
-        class: eZ\Publish\Core\Limitation\NewObjectStateLimitationType
+        class: Ibexa\Core\Limitation\NewObjectStateLimitationType
         arguments: ["@ezpublish.api.persistence_handler"]
         tags:
             - {name: ezpublish.limitationType, alias: NewState}
 
     ezpublish.api.role.limitation_type.subtree:
-        class: eZ\Publish\Core\Limitation\SubtreeLimitationType
+        class: Ibexa\Core\Limitation\SubtreeLimitationType
         arguments: ["@ezpublish.api.persistence_handler"]
         tags:
             - {name: ezpublish.limitationType, alias: Subtree}
 
     ezpublish.api.role.limitation_type.user_group:
-        class: eZ\Publish\Core\Limitation\UserGroupLimitationType
+        class: Ibexa\Core\Limitation\UserGroupLimitationType
         arguments: ["@ezpublish.api.persistence_handler"]
         tags:
             - {name: ezpublish.limitationType, alias: Group}
 
     ezpublish.api.role.limitation_type.status:
-        class: eZ\Publish\Core\Limitation\StatusLimitationType
+        class: Ibexa\Core\Limitation\StatusLimitationType
         tags:
             - {name: ezpublish.limitationType, alias: Status}
 
@@ -109,22 +109,22 @@ services:
 
     # ezjscore limitations, not applicable by API/Platform stack, users are adviced to use Symfony for ajax controllers
     ezpublish.api.role.limitation_type.function_list:
-        class: eZ\Publish\Core\Limitation\BlockingLimitationType
+        class: Ibexa\Core\Limitation\BlockingLimitationType
         arguments: ['FunctionList']
         tags: [{name: ezpublish.limitationType, alias: FunctionList}]
 
     # Misc limitations used by ezcomments, not applicable to Platform replacement: EzCommentsBundle
     ezpublish.api.role.limitation_type.ezcomments.content_section:
-        class: eZ\Publish\Core\Limitation\BlockingLimitationType
+        class: Ibexa\Core\Limitation\BlockingLimitationType
         arguments: ['ContentSection']
         tags: [{name: ezpublish.limitationType, alias: ContentSection}]
 
     ezpublish.api.role.limitation_type.ezcomments.comment_creator:
-        class: eZ\Publish\Core\Limitation\BlockingLimitationType
+        class: Ibexa\Core\Limitation\BlockingLimitationType
         arguments: ['CommentCreator']
         tags: [{name: ezpublish.limitationType, alias: CommentCreator}]
 
     ezpublish.api.role.limitation_type.ezcomments.anti_spam:
-        class: eZ\Publish\Core\Limitation\BlockingLimitationType
+        class: Ibexa\Core\Limitation\BlockingLimitationType
         arguments: ['AntiSpam']
         tags: [{name: ezpublish.limitationType, alias: AntiSpam}]
