--- a/eZ/Publish/Core/settings/search_engines/field_value_mappers.yml
+++ b/eZ/Publish/Core/settings/search_engines/field_value_mappers.yml
@@ -1,73 +1,73 @@
 services:
     ezpublish.search.common.field_value_mapper.boolean:
-        class: eZ\Publish\Core\Search\Common\FieldValueMapper\BooleanMapper
+        class: Ibexa\Core\Search\Common\FieldValueMapper\BooleanMapper
         tags:
             - {name: ezpublish.search.common.field_value_mapper}
 
     ezpublish.search.common.field_value_mapper.date:
-        class: eZ\Publish\Core\Search\Common\FieldValueMapper\DateMapper
+        class: Ibexa\Core\Search\Common\FieldValueMapper\DateMapper
         tags:
             - {name: ezpublish.search.common.field_value_mapper}
 
     ezpublish.search.common.field_value_mapper.document:
-        class: eZ\Publish\Core\Search\Common\FieldValueMapper\DocumentMapper
+        class: Ibexa\Core\Search\Common\FieldValueMapper\DocumentMapper
         tags:
             - {name: ezpublish.search.common.field_value_mapper}
 
     ezpublish.search.common.field_value_mapper.geo_location:
-        class: eZ\Publish\Core\Search\Common\FieldValueMapper\GeoLocationMapper
+        class: Ibexa\Core\Search\Common\FieldValueMapper\GeoLocationMapper
         tags:
             - {name: ezpublish.search.common.field_value_mapper}
 
     ezpublish.search.common.field_value_mapper.float:
-        class: eZ\Publish\Core\Search\Common\FieldValueMapper\FloatMapper
+        class: Ibexa\Core\Search\Common\FieldValueMapper\FloatMapper
         tags:
             - {name: ezpublish.search.common.field_value_mapper}
 
     ezpublish.search.common.field_value_mapper.identifier:
-        class: eZ\Publish\Core\Search\Common\FieldValueMapper\IdentifierMapper
+        class: Ibexa\Core\Search\Common\FieldValueMapper\IdentifierMapper
         tags:
             - {name: ezpublish.search.common.field_value_mapper}
 
     ezpublish.search.common.field_value_mapper.multiple_integer:
-        class: eZ\Publish\Core\Search\Common\FieldValueMapper\MultipleIntegerMapper
+        class: Ibexa\Core\Search\Common\FieldValueMapper\MultipleIntegerMapper
         tags:
             - {name: ezpublish.search.common.field_value_mapper}
 
     ezpublish.search.common.field_value_mapper.integer:
-        class: eZ\Publish\Core\Search\Common\FieldValueMapper\IntegerMapper
+        class: Ibexa\Core\Search\Common\FieldValueMapper\IntegerMapper
         tags:
             - {name: ezpublish.search.common.field_value_mapper}
 
     ezpublish.search.common.field_value_mapper.multiple_boolean:
-        class: eZ\Publish\Core\Search\Common\FieldValueMapper\MultipleBooleanMapper
+        class: Ibexa\Core\Search\Common\FieldValueMapper\MultipleBooleanMapper
         tags:
             - {name: ezpublish.search.common.field_value_mapper}
 
     ezpublish.search.common.field_value_mapper.multiple_identifier:
-        class: eZ\Publish\Core\Search\Common\FieldValueMapper\MultipleIdentifierMapper
+        class: Ibexa\Core\Search\Common\FieldValueMapper\MultipleIdentifierMapper
         tags:
             - {name: ezpublish.search.common.field_value_mapper}
 
     ezpublish.search.common.field_value_mapper.multiple_string:
-        class: eZ\Publish\Core\Search\Common\FieldValueMapper\MultipleStringMapper
+        class: Ibexa\Core\Search\Common\FieldValueMapper\MultipleStringMapper
         tags:
             - {name: ezpublish.search.common.field_value_mapper}
 
     ezpublish.search.common.field_value_mapper.price:
-        class: eZ\Publish\Core\Search\Common\FieldValueMapper\PriceMapper
+        class: Ibexa\Core\Search\Common\FieldValueMapper\PriceMapper
         tags:
             - {name: ezpublish.search.common.field_value_mapper}
 
     ezpublish.search.common.field_value_mapper.string:
-        class: eZ\Publish\Core\Search\Common\FieldValueMapper\StringMapper
+        class: Ibexa\Core\Search\Common\FieldValueMapper\StringMapper
         tags:
             - {name: ezpublish.search.common.field_value_mapper}
 
-    eZ\Publish\Core\Search\Common\FieldValueMapper\RemoteIdentifierMapper:
+    Ibexa\Core\Search\Common\FieldValueMapper\RemoteIdentifierMapper:
         tags:
             - {name: ezpublish.search.common.field_value_mapper}
 
-    eZ\Publish\Core\Search\Common\FieldValueMapper\MultipleRemoteIdentifierMapper:
+    Ibexa\Core\Search\Common\FieldValueMapper\MultipleRemoteIdentifierMapper:
         tags:
             - {name: ezpublish.search.common.field_value_mapper}
