--- a/eZ/Publish/Core/settings/search_engines/legacy/sort_clause_handlers_location.yml
+++ b/eZ/Publish/Core/settings/search_engines/legacy/sort_clause_handlers_location.yml
@@ -3,43 +3,43 @@ services:
     #  - ezpublish.search.legacy.gateway.sort_clause_handler.location
     # are registered to this one using compilation pass
     ezpublish.search.legacy.gateway.sort_clause_converter.location:
-        class: eZ\Publish\Core\Search\Legacy\Content\Common\Gateway\SortClauseConverter
+        class: Ibexa\Core\Search\Legacy\Content\Common\Gateway\SortClauseConverter
 
     ezpublish.search.legacy.gateway.sort_clause_handler.location.id:
         parent: ezpublish.search.legacy.gateway.sort_clause_handler.base
-        class: eZ\Publish\Core\Search\Legacy\Content\Location\Gateway\SortClauseHandler\Location\Id
+        class: Ibexa\Core\Search\Legacy\Content\Location\Gateway\SortClauseHandler\Location\Id
         tags:
             - {name: ezpublish.search.legacy.gateway.sort_clause_handler.location}
 
     ezpublish.search.legacy.gateway.sort_clause_handler.location.depth:
         parent: ezpublish.search.legacy.gateway.sort_clause_handler.base
-        class: eZ\Publish\Core\Search\Legacy\Content\Location\Gateway\SortClauseHandler\Location\Depth
+        class: Ibexa\Core\Search\Legacy\Content\Location\Gateway\SortClauseHandler\Location\Depth
         tags:
             - {name: ezpublish.search.legacy.gateway.sort_clause_handler.location}
             - {name: ezplatform.trash.search.legacy.gateway.sort_clause_handler}
 
     ezpublish.search.legacy.gateway.sort_clause_handler.location.path:
         parent: ezpublish.search.legacy.gateway.sort_clause_handler.base
-        class: eZ\Publish\Core\Search\Legacy\Content\Location\Gateway\SortClauseHandler\Location\Path
+        class: Ibexa\Core\Search\Legacy\Content\Location\Gateway\SortClauseHandler\Location\Path
         tags:
             - {name: ezpublish.search.legacy.gateway.sort_clause_handler.location}
             - {name: ezplatform.trash.search.legacy.gateway.sort_clause_handler}
 
     ezpublish.search.legacy.gateway.sort_clause_handler.location.is_main_location:
         parent: ezpublish.search.legacy.gateway.sort_clause_handler.base
-        class: eZ\Publish\Core\Search\Legacy\Content\Location\Gateway\SortClauseHandler\Location\IsMainLocation
+        class: Ibexa\Core\Search\Legacy\Content\Location\Gateway\SortClauseHandler\Location\IsMainLocation
         tags:
             - {name: ezpublish.search.legacy.gateway.sort_clause_handler.location}
 
     ezpublish.search.legacy.gateway.sort_clause_handler.location.priority:
         parent: ezpublish.search.legacy.gateway.sort_clause_handler.base
-        class: eZ\Publish\Core\Search\Legacy\Content\Location\Gateway\SortClauseHandler\Location\Priority
+        class: Ibexa\Core\Search\Legacy\Content\Location\Gateway\SortClauseHandler\Location\Priority
         tags:
             - {name: ezpublish.search.legacy.gateway.sort_clause_handler.location}
             - {name: ezplatform.trash.search.legacy.gateway.sort_clause_handler}
 
     ezpublish.search.legacy.gateway.sort_clause_handler.location.visibility:
         parent: ezpublish.search.legacy.gateway.sort_clause_handler.base
-        class: eZ\Publish\Core\Search\Legacy\Content\Location\Gateway\SortClauseHandler\Location\Visibility
+        class: Ibexa\Core\Search\Legacy\Content\Location\Gateway\SortClauseHandler\Location\Visibility
         tags:
             - {name: ezpublish.search.legacy.gateway.sort_clause_handler.location}
