--- a/eZ/Publish/Core/settings/storage_engines/cache.yml
+++ b/eZ/Publish/Core/settings/storage_engines/cache.yml
@@ -190,11 +190,11 @@ parameters:
 
 services:
     # Setup cache pool, with InMemoryCacheAdapter as decorator
-    eZ\Publish\Core\Persistence\Cache\Adapter\TransactionalInMemoryCacheAdapter:
+    Ibexa\Core\Persistence\Cache\Adapter\TransactionalInMemoryCacheAdapter:
         decorates: ezpublish.cache_pool
         lazy: true
         arguments:
-            $sharedPool: '@eZ\Publish\Core\Persistence\Cache\Adapter\TransactionalInMemoryCacheAdapter.inner'
+            $sharedPool: '@Ibexa\Core\Persistence\Cache\Adapter\TransactionalInMemoryCacheAdapter.inner'
             $inMemoryPools: !tagged ez.spi.persistence.cache.inmemory
 
     ezpublish.cache_pool:
@@ -211,14 +211,14 @@ services:
 
     # Logger which logs info when in dev for Symfony web toolbar
     ezpublish.spi.persistence.cache.persistenceLogger:
-        class: eZ\Publish\Core\Persistence\Cache\PersistenceLogger
+        class: Ibexa\Core\Persistence\Cache\PersistenceLogger
         arguments:
             - "%ezpublish.spi.persistence.cache.persistenceLogger.enableCallLogging%"
 
     # In-Memory cache pools
     ezpublish.spi.persistence.cache.inmemory:
         public: false
-        class: eZ\Publish\Core\Persistence\Cache\InMemory\InMemoryCache
+        class: Ibexa\Core\Persistence\Cache\InMemory\InMemoryCache
         arguments:
             - "%ezpublish.spi.persistence.cache.inmemory.ttl%"
             - "%ezpublish.spi.persistence.cache.inmemory.limit%"
@@ -227,7 +227,7 @@ services:
 
     ezpublish.spi.persistence.cache.inmemory.content:
         public: false
-        class: eZ\Publish\Core\Persistence\Cache\InMemory\InMemoryCache
+        class: Ibexa\Core\Persistence\Cache\InMemory\InMemoryCache
         arguments:
             - "%ezpublish.spi.persistence.cache.inmemory.content.ttl%"
             - "%ezpublish.spi.persistence.cache.inmemory.content.limit%"
@@ -245,7 +245,7 @@ services:
 
     # SPI Persistence Cache Handlers, incl abstracts
     ezpublish.spi.persistence.cache.abstractHandler:
-        class: eZ\Publish\Core\Persistence\Cache\AbstractHandler
+        class: Ibexa\Core\Persistence\Cache\AbstractHandler
         abstract:  true
         arguments:
             - "@ezpublish.cache_pool"
@@ -254,7 +254,7 @@ services:
             - '@Ibexa\Core\Persistence\Cache\Tag\CacheIdentifierGeneratorInterface'
 
     ezpublish.spi.persistence.cache.abstractInMemoryHandler:
-        class: eZ\Publish\Core\Persistence\Cache\AbstractInMemoryHandler
+        class: Ibexa\Core\Persistence\Cache\AbstractInMemoryHandler
         abstract:  true
         arguments:
             - "@ezpublish.cache_pool"
@@ -263,83 +263,83 @@ services:
 
     ezpublish.spi.persistence.cache.abstractInMemoryPersistenceHandler:
         parent: ezpublish.spi.persistence.cache.abstractInMemoryHandler
-        class: eZ\Publish\Core\Persistence\Cache\AbstractInMemoryPersistenceHandler
+        class: Ibexa\Core\Persistence\Cache\AbstractInMemoryPersistenceHandler
         abstract: true
         arguments:
             - "@ezpublish.api.storage_engine"
             - '@Ibexa\Core\Persistence\Cache\Tag\CacheIdentifierGeneratorInterface'
 
     ezpublish.spi.persistence.cache.sectionHandler:
-        class: eZ\Publish\Core\Persistence\Cache\SectionHandler
+        class: Ibexa\Core\Persistence\Cache\SectionHandler
         parent: ezpublish.spi.persistence.cache.abstractHandler
 
     ezpublish.spi.persistence.cache.locationHandler:
-        class: eZ\Publish\Core\Persistence\Cache\LocationHandler
+        class: Ibexa\Core\Persistence\Cache\LocationHandler
         parent: ezpublish.spi.persistence.cache.abstractInMemoryPersistenceHandler
         arguments: # Overload argument to use content in-memory service
             index_2: '@ezpublish.spi.persistence.cache.inmemory.content'
 
     ezpublish.spi.persistence.cache.contentHandler:
-        class: eZ\Publish\Core\Persistence\Cache\ContentHandler
+        class: Ibexa\Core\Persistence\Cache\ContentHandler
         parent: ezpublish.spi.persistence.cache.abstractInMemoryPersistenceHandler
         arguments: # Overload argument to use content in-memory service
             index_2: '@ezpublish.spi.persistence.cache.inmemory.content'
 
     ezpublish.spi.persistence.cache.objectStateHandler:
-        class: eZ\Publish\Core\Persistence\Cache\ObjectStateHandler
+        class: Ibexa\Core\Persistence\Cache\ObjectStateHandler
         parent: ezpublish.spi.persistence.cache.abstractInMemoryPersistenceHandler
 
     ezpublish.spi.persistence.cache.contentLanguageHandler:
-        class: eZ\Publish\Core\Persistence\Cache\ContentLanguageHandler
+        class: Ibexa\Core\Persistence\Cache\ContentLanguageHandler
         parent: ezpublish.spi.persistence.cache.abstractInMemoryPersistenceHandler
 
     ezpublish.spi.persistence.cache.contentTypeHandler:
-        class: eZ\Publish\Core\Persistence\Cache\ContentTypeHandler
+        class: Ibexa\Core\Persistence\Cache\ContentTypeHandler
         parent: ezpublish.spi.persistence.cache.abstractInMemoryPersistenceHandler
 
     ezpublish.spi.persistence.cache.userHandler:
-        class: eZ\Publish\Core\Persistence\Cache\UserHandler
+        class: Ibexa\Core\Persistence\Cache\UserHandler
         parent: ezpublish.spi.persistence.cache.abstractInMemoryPersistenceHandler
 
     ezpublish.spi.persistence.cache.transactionhandler:
-        class: eZ\Publish\Core\Persistence\Cache\TransactionHandler
+        class: Ibexa\Core\Persistence\Cache\TransactionHandler
         parent: ezpublish.spi.persistence.cache.abstractInMemoryPersistenceHandler
 
     ezpublish.spi.persistence.cache.trashHandler:
-        class: eZ\Publish\Core\Persistence\Cache\TrashHandler
+        class: Ibexa\Core\Persistence\Cache\TrashHandler
         parent: ezpublish.spi.persistence.cache.abstractHandler
 
     ezpublish.spi.persistence.cache.urlAliasHandler:
-        class: eZ\Publish\Core\Persistence\Cache\UrlAliasHandler
+        class: Ibexa\Core\Persistence\Cache\UrlAliasHandler
         parent: ezpublish.spi.persistence.cache.abstractInMemoryPersistenceHandler
         arguments: # Overload argument to use content in-memory service
           index_2: '@ezpublish.spi.persistence.cache.inmemory.content'
 
     ezpublish.spi.persistence.cache.urlHandler:
-        class: eZ\Publish\Core\Persistence\Cache\URLHandler
+        class: Ibexa\Core\Persistence\Cache\URLHandler
         parent: ezpublish.spi.persistence.cache.abstractHandler
 
     ezpublish.spi.persistence.cache.bookmarkHandler:
-        class: eZ\Publish\Core\Persistence\Cache\BookmarkHandler
+        class: Ibexa\Core\Persistence\Cache\BookmarkHandler
         parent: ezpublish.spi.persistence.cache.abstractHandler
 
     ezpublish.spi.persistence.cache.notificationHandler:
-        class: eZ\Publish\Core\Persistence\Cache\NotificationHandler
+        class: Ibexa\Core\Persistence\Cache\NotificationHandler
         parent: ezpublish.spi.persistence.cache.abstractHandler
 
     ezpublish.spi.persistence.cache.userPreferenceHandler:
-        class: eZ\Publish\Core\Persistence\Cache\UserPreferenceHandler
+        class: Ibexa\Core\Persistence\Cache\UserPreferenceHandler
         parent: ezpublish.spi.persistence.cache.abstractInMemoryPersistenceHandler
 
     ezpublish.spi.persistence.cache.urlWildcardHandler:
-        class: eZ\Publish\Core\Persistence\Cache\UrlWildcardHandler
+        class: Ibexa\Core\Persistence\Cache\UrlWildcardHandler
         parent: ezpublish.spi.persistence.cache.abstractHandler
 
-    eZ\Publish\Core\Persistence\Cache\SettingHandler:
+    Ibexa\Core\Persistence\Cache\SettingHandler:
         parent: ezpublish.spi.persistence.cache.abstractHandler
 
     ezpublish.spi.persistence.cache:
-        class: eZ\Publish\Core\Persistence\Cache\Handler
+        class: Ibexa\Core\Persistence\Cache\Handler
         arguments:
             - "@ezpublish.api.storage_engine"
             - "@ezpublish.spi.persistence.cache.sectionHandler"
@@ -357,5 +357,5 @@ services:
             - '@ezpublish.spi.persistence.cache.notificationHandler'
             - '@ezpublish.spi.persistence.cache.userPreferenceHandler'
             - "@ezpublish.spi.persistence.cache.urlWildcardHandler"
-            - '@eZ\Publish\Core\Persistence\Cache\SettingHandler'
+            - '@Ibexa\Core\Persistence\Cache\SettingHandler'
             - "@ezpublish.spi.persistence.cache.persistenceLogger"
