--- a/eZ/Publish/Core/settings/storage_engines/legacy/content_type.yml
+++ b/eZ/Publish/Core/settings/storage_engines/legacy/content_type.yml
@@ -1,13 +1,13 @@
 services:
     ezpublish.persistence.legacy.content_type.gateway.inner:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Type\Gateway\DoctrineDatabase
+        class: Ibexa\Core\Persistence\Legacy\Content\Type\Gateway\DoctrineDatabase
         arguments:
             - '@ezpublish.api.storage_engine.legacy.connection'
-            - '@eZ\Publish\Core\Persistence\Legacy\SharedGateway\Gateway'
+            - '@Ibexa\Core\Persistence\Legacy\SharedGateway\Gateway'
             - '@ezpublish.persistence.legacy.language.mask_generator'
 
     ezpublish.persistence.legacy.content_type.gateway.exception_conversion:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Type\Gateway\ExceptionConversion
+        class: Ibexa\Core\Persistence\Legacy\Content\Type\Gateway\ExceptionConversion
         arguments:
             - "@ezpublish.persistence.legacy.content_type.gateway.inner"
 
@@ -16,13 +16,13 @@ services:
         alias: ezpublish.persistence.legacy.content_type.gateway.exception_conversion
 
     ezpublish.persistence.legacy.content_type.mapper:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Type\Mapper
+        class: Ibexa\Core\Persistence\Legacy\Content\Type\Mapper
         arguments:
             - "@ezpublish.persistence.legacy.field_value_converter.registry"
             - '@ezpublish.persistence.legacy.language.mask_generator'
 
     ezpublish.persistence.legacy.content_type.content_updater:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Type\ContentUpdater
+        class: Ibexa\Core\Persistence\Legacy\Content\Type\ContentUpdater
         arguments:
             - "@ezpublish.persistence.legacy.content.gateway"
             - "@ezpublish.persistence.legacy.field_value_converter.registry"
@@ -31,11 +31,11 @@ services:
 
     ezpublish.persistence.legacy.content_type.update_handler.base:
         abstract: true
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Type\Update\Handler
+        class: Ibexa\Core\Persistence\Legacy\Content\Type\Update\Handler
 
     ezpublish.persistence.legacy.content_type.update_handler.basic:
         parent: ezpublish.persistence.legacy.content_type.update_handler.base
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Type\Update\Handler\DoctrineDatabase
+        class: Ibexa\Core\Persistence\Legacy\Content\Type\Update\Handler\DoctrineDatabase
         arguments:
             - "@ezpublish.persistence.legacy.content_type.gateway"
             - "@ezpublish.persistence.legacy.content_type.content_updater"
@@ -44,14 +44,14 @@ services:
         alias: ezpublish.persistence.legacy.content_type.update_handler.basic
 
     ezpublish.spi.persistence.legacy.content_type.handler.inner:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Type\Handler
+        class: Ibexa\Core\Persistence\Legacy\Content\Type\Handler
         arguments:
             - "@ezpublish.persistence.legacy.content_type.gateway"
             - "@ezpublish.persistence.legacy.content_type.mapper"
             - "@ezpublish.persistence.legacy.content_type.update_handler"
 
     ezpublish.spi.persistence.legacy.content_type.handler.caching:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Type\MemoryCachingHandler
+        class: Ibexa\Core\Persistence\Legacy\Content\Type\MemoryCachingHandler
         lazy: true
         arguments:
             - "@ezpublish.spi.persistence.legacy.content_type.handler.inner"
