--- a/eZ/Publish/Core/settings/storage_engines/legacy/language.yml
+++ b/eZ/Publish/Core/settings/storage_engines/legacy/language.yml
@@ -1,11 +1,11 @@
 services:
     ezpublish.persistence.legacy.language.gateway.inner:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Language\Gateway\DoctrineDatabase
+        class: Ibexa\Core\Persistence\Legacy\Content\Language\Gateway\DoctrineDatabase
         arguments:
             - "@ezpublish.api.storage_engine.legacy.connection"
 
     ezpublish.persistence.legacy.language.gateway.exception_conversion:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Language\Gateway\ExceptionConversion
+        class: Ibexa\Core\Persistence\Legacy\Content\Language\Gateway\ExceptionConversion
         arguments:
             - "@ezpublish.persistence.legacy.language.gateway.inner"
 
@@ -14,16 +14,16 @@ services:
         alias: ezpublish.persistence.legacy.language.gateway.exception_conversion
 
     ezpublish.persistence.legacy.language.mapper:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Language\Mapper
+        class: Ibexa\Core\Persistence\Legacy\Content\Language\Mapper
 
     ezpublish.spi.persistence.legacy.language.handler.inner:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Language\Handler
+        class: Ibexa\Core\Persistence\Legacy\Content\Language\Handler
         arguments:
             - "@ezpublish.persistence.legacy.language.gateway"
             - "@ezpublish.persistence.legacy.language.mapper"
 
     ezpublish.spi.persistence.legacy.language.handler.caching:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Language\CachingHandler
+        class: Ibexa\Core\Persistence\Legacy\Content\Language\CachingHandler
         lazy: true
         arguments:
             - "@ezpublish.spi.persistence.legacy.language.handler.inner"
@@ -34,5 +34,5 @@ services:
         alias: ezpublish.spi.persistence.legacy.language.handler.caching
 
     ezpublish.persistence.legacy.language.mask_generator:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Language\MaskGenerator
+        class: Ibexa\Core\Persistence\Legacy\Content\Language\MaskGenerator
         arguments: ["@ezpublish.spi.persistence.legacy.language.handler"]
