--- a/eZ/Publish/Core/settings/storage_engines/legacy/location.yml
+++ b/eZ/Publish/Core/settings/storage_engines/legacy/location.yml
@@ -1,6 +1,6 @@
 services:
     ezpublish.persistence.legacy.location.gateway.inner:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Location\Gateway\DoctrineDatabase
+        class: Ibexa\Core\Persistence\Legacy\Content\Location\Gateway\DoctrineDatabase
         arguments:
             - "@ezpublish.api.storage_engine.legacy.connection"
             - "@ezpublish.persistence.legacy.language.mask_generator"
@@ -8,7 +8,7 @@ services:
             - '@ezplatform.trash.search.legacy.gateway.sort_clause_converter'
 
     ezpublish.persistence.legacy.location.gateway.exception_conversion:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Location\Gateway\ExceptionConversion
+        class: Ibexa\Core\Persistence\Legacy\Content\Location\Gateway\ExceptionConversion
         arguments:
             - "@ezpublish.persistence.legacy.location.gateway.inner"
 
@@ -17,10 +17,10 @@ services:
         alias: ezpublish.persistence.legacy.location.gateway.exception_conversion
 
     ezpublish.persistence.legacy.location.mapper:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Location\Mapper
+        class: Ibexa\Core\Persistence\Legacy\Content\Location\Mapper
 
     ezpublish.spi.persistence.legacy.location.handler:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Location\Handler
+        class: Ibexa\Core\Persistence\Legacy\Content\Location\Handler
         arguments:
             - "@ezpublish.persistence.legacy.location.gateway"
             - "@ezpublish.persistence.legacy.location.mapper"
