--- a/eZ/Publish/Core/settings/storage_engines/legacy/notification.yml
+++ b/eZ/Publish/Core/settings/storage_engines/legacy/notification.yml
@@ -1,19 +1,19 @@
 services:
-    eZ\Publish\Core\Persistence\Legacy\Notification\Gateway\DoctrineDatabase:
+    Ibexa\Core\Persistence\Legacy\Notification\Gateway\DoctrineDatabase:
         arguments:
             $connection: '@ezpublish.persistence.connection'
 
-    eZ\Publish\Core\Persistence\Legacy\Notification\Gateway\ExceptionConversion:
+    Ibexa\Core\Persistence\Legacy\Notification\Gateway\ExceptionConversion:
         arguments:
-            $innerGateway: '@eZ\Publish\Core\Persistence\Legacy\Notification\Gateway\DoctrineDatabase'
+            $innerGateway: '@Ibexa\Core\Persistence\Legacy\Notification\Gateway\DoctrineDatabase'
 
-    eZ\Publish\Core\Persistence\Legacy\Notification\Mapper: ~
+    Ibexa\Core\Persistence\Legacy\Notification\Mapper: ~
 
-    eZ\Publish\Core\Persistence\Legacy\Notification\Handler:
+    Ibexa\Core\Persistence\Legacy\Notification\Handler:
         arguments:
-            $gateway: '@eZ\Publish\Core\Persistence\Legacy\Notification\Gateway\ExceptionConversion'
-            $mapper: '@eZ\Publish\Core\Persistence\Legacy\Notification\Mapper'
+            $gateway: '@Ibexa\Core\Persistence\Legacy\Notification\Gateway\ExceptionConversion'
+            $mapper: '@Ibexa\Core\Persistence\Legacy\Notification\Mapper'
         lazy: true
 
     ezpublish.spi.persistence.legacy.notification.handler:
-        alias: 'eZ\Publish\Core\Persistence\Legacy\Notification\Handler'
+        alias: 'Ibexa\Core\Persistence\Legacy\Notification\Handler'
