--- a/eZ/Publish/Core/settings/storage_engines/legacy/object_state.yml
+++ b/eZ/Publish/Core/settings/storage_engines/legacy/object_state.yml
@@ -1,12 +1,12 @@
 services:
     ezpublish.persistence.legacy.object_state.gateway.inner:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\ObjectState\Gateway\DoctrineDatabase
+        class: Ibexa\Core\Persistence\Legacy\Content\ObjectState\Gateway\DoctrineDatabase
         arguments:
             - "@ezpublish.api.storage_engine.legacy.connection"
             - "@ezpublish.persistence.legacy.language.mask_generator"
 
     ezpublish.persistence.legacy.object_state.gateway.exception_conversion:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\ObjectState\Gateway\ExceptionConversion
+        class: Ibexa\Core\Persistence\Legacy\Content\ObjectState\Gateway\ExceptionConversion
         arguments:
             - "@ezpublish.persistence.legacy.object_state.gateway.inner"
 
@@ -15,12 +15,12 @@ services:
         alias: ezpublish.persistence.legacy.object_state.gateway.exception_conversion
 
     ezpublish.persistence.legacy.object_state.mapper:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\ObjectState\Mapper
+        class: Ibexa\Core\Persistence\Legacy\Content\ObjectState\Mapper
         arguments:
             - "@ezpublish.spi.persistence.legacy.language.handler"
 
     ezpublish.spi.persistence.legacy.object_state.handler:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\ObjectState\Handler
+        class: Ibexa\Core\Persistence\Legacy\Content\ObjectState\Handler
         arguments:
             - "@ezpublish.persistence.legacy.object_state.gateway"
             - "@ezpublish.persistence.legacy.object_state.mapper"
