--- a/eZ/Publish/Core/settings/storage_engines/legacy/section.yml
+++ b/eZ/Publish/Core/settings/storage_engines/legacy/section.yml
@@ -1,11 +1,11 @@
 services:
     ezpublish.persistence.legacy.section.gateway.inner:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Section\Gateway\DoctrineDatabase
+        class: Ibexa\Core\Persistence\Legacy\Content\Section\Gateway\DoctrineDatabase
         arguments:
             - "@ezpublish.api.storage_engine.legacy.connection"
 
     ezpublish.persistence.legacy.section.gateway.exception_conversion:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Section\Gateway\ExceptionConversion
+        class: Ibexa\Core\Persistence\Legacy\Content\Section\Gateway\ExceptionConversion
         arguments:
             - "@ezpublish.persistence.legacy.section.gateway.inner"
 
@@ -14,7 +14,7 @@ services:
         alias: ezpublish.persistence.legacy.section.gateway.exception_conversion
 
     ezpublish.spi.persistence.legacy.section.handler:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Section\Handler
+        class: Ibexa\Core\Persistence\Legacy\Content\Section\Handler
         arguments:
             - "@ezpublish.persistence.legacy.section.gateway"
         lazy: true
