--- a/eZ/Publish/Core/settings/storage_engines/legacy/setting.yml
+++ b/eZ/Publish/Core/settings/storage_engines/legacy/setting.yml
@@ -1,11 +1,11 @@
 services:
     ezpublish.persistence.legacy.setting.gateway.inner:
-        class: eZ\Publish\Core\Persistence\Legacy\Setting\Gateway\DoctrineDatabase
+        class: Ibexa\Core\Persistence\Legacy\Setting\Gateway\DoctrineDatabase
         arguments:
             - '@ezpublish.api.storage_engine.legacy.connection'
 
     ezpublish.persistence.legacy.setting.gateway.exception_conversion:
-        class: eZ\Publish\Core\Persistence\Legacy\Setting\Gateway\ExceptionConversion
+        class: Ibexa\Core\Persistence\Legacy\Setting\Gateway\ExceptionConversion
         arguments:
             - '@ezpublish.persistence.legacy.setting.gateway.inner'
 
@@ -14,7 +14,7 @@ services:
         alias: ezpublish.persistence.legacy.setting.gateway.exception_conversion
 
     ezpublish.spi.persistence.legacy.setting.handler:
-        class: eZ\Publish\Core\Persistence\Legacy\Setting\Handler
+        class: Ibexa\Core\Persistence\Legacy\Setting\Handler
         arguments:
             - '@ezpublish.persistence.legacy.setting.gateway'
         lazy: true
