--- a/eZ/Publish/Core/settings/storage_engines/legacy/shared_gateway.yaml
+++ b/eZ/Publish/Core/settings/storage_engines/legacy/shared_gateway.yaml
@@ -6,16 +6,16 @@ services:
         bind:
             $connection: '@ezpublish.persistence.connection'
 
-    eZ\Publish\Core\Persistence\Legacy\SharedGateway\DatabasePlatform\FallbackGateway: ~
+    Ibexa\Core\Persistence\Legacy\SharedGateway\DatabasePlatform\FallbackGateway: ~
 
-    eZ\Publish\Core\Persistence\Legacy\SharedGateway\DatabasePlatform\SqliteGateway:
+    Ibexa\Core\Persistence\Legacy\SharedGateway\DatabasePlatform\SqliteGateway:
         tags:
             - { name: ezplatform.persistence.legacy.gateway.shared, platform: sqlite }
 
-    eZ\Publish\Core\Persistence\Legacy\SharedGateway\GatewayFactory:
+    Ibexa\Core\Persistence\Legacy\SharedGateway\GatewayFactory:
         arguments:
-            $fallbackGateway: '@eZ\Publish\Core\Persistence\Legacy\SharedGateway\DatabasePlatform\FallbackGateway'
+            $fallbackGateway: '@Ibexa\Core\Persistence\Legacy\SharedGateway\DatabasePlatform\FallbackGateway'
             $gateways: !tagged_iterator { tag: ezplatform.persistence.legacy.gateway.shared, index_by: platform }
 
-    eZ\Publish\Core\Persistence\Legacy\SharedGateway\Gateway:
-        factory: ['@eZ\Publish\Core\Persistence\Legacy\SharedGateway\GatewayFactory', 'buildSharedGateway']
+    Ibexa\Core\Persistence\Legacy\SharedGateway\Gateway:
+        factory: ['@Ibexa\Core\Persistence\Legacy\SharedGateway\GatewayFactory', 'buildSharedGateway']
