--- a/eZ/Publish/Core/settings/storage_engines/legacy/trash.yml
+++ b/eZ/Publish/Core/settings/storage_engines/legacy/trash.yml
@@ -1,6 +1,6 @@
 services:
     ezpublish.spi.persistence.legacy.trash.handler:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\Location\Trash\Handler
+        class: Ibexa\Core\Persistence\Legacy\Content\Location\Trash\Handler
         arguments:
             - "@ezpublish.spi.persistence.legacy.location.handler"
             - "@ezpublish.persistence.legacy.location.gateway.exception_conversion"
@@ -10,9 +10,9 @@ services:
 
     # reusing parts of LSE
     ezplatform.trash.search.legacy.gateway.criteria_converter:
-        class: eZ\Publish\Core\Search\Legacy\Content\Common\Gateway\CriteriaConverter
+        class: Ibexa\Core\Search\Legacy\Content\Common\Gateway\CriteriaConverter
         lazy: true
 
     ezplatform.trash.search.legacy.gateway.sort_clause_converter:
-        class: eZ\Publish\Core\Search\Legacy\Content\Common\Gateway\SortClauseConverter
+        class: Ibexa\Core\Search\Legacy\Content\Common\Gateway\SortClauseConverter
         lazy: true
