--- a/eZ/Publish/Core/settings/storage_engines/legacy/url.yml
+++ b/eZ/Publish/Core/settings/storage_engines/legacy/url.yml
@@ -1,12 +1,12 @@
 services:
     ezpublish.persistence.legacy.url.gateway.inner:
-        class: eZ\Publish\Core\Persistence\Legacy\URL\Gateway\DoctrineDatabase
+        class: Ibexa\Core\Persistence\Legacy\URL\Gateway\DoctrineDatabase
         arguments:
             - '@ezpublish.persistence.connection'
             - '@ezpublish.spi.persistence.legacy.url.criterion_converter'
 
     ezpublish.persistence.legacy.url.gateway.exception_conversion:
-        class: eZ\Publish\Core\Persistence\Legacy\URL\Gateway\ExceptionConversion
+        class: Ibexa\Core\Persistence\Legacy\URL\Gateway\ExceptionConversion
         arguments:
             - '@ezpublish.persistence.legacy.url.gateway.inner'
 
@@ -15,16 +15,16 @@ services:
         alias: ezpublish.persistence.legacy.url.gateway.exception_conversion
 
     ezpublish.persistence.legacy.url.mapper:
-        class: eZ\Publish\Core\Persistence\Legacy\URL\Mapper
+        class: Ibexa\Core\Persistence\Legacy\URL\Mapper
 
     ezpublish.spi.persistence.legacy.url.handler:
-        class: eZ\Publish\Core\Persistence\Legacy\URL\Handler
+        class: Ibexa\Core\Persistence\Legacy\URL\Handler
         arguments:
             - "@ezpublish.persistence.legacy.url.gateway"
             - "@ezpublish.persistence.legacy.url.mapper"
         lazy: true
 
     ezpublish.spi.persistence.legacy.url.criterion_converter:
-        class: eZ\Publish\Core\Persistence\Legacy\URL\Query\CriteriaConverter
+        class: Ibexa\Core\Persistence\Legacy\URL\Query\CriteriaConverter
 
 
