--- a/eZ/Publish/Core/settings/storage_engines/legacy/url_alias.yml
+++ b/eZ/Publish/Core/settings/storage_engines/legacy/url_alias.yml
@@ -1,12 +1,12 @@
 services:
     ezpublish.persistence.legacy.url_alias.gateway.inner:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\UrlAlias\Gateway\DoctrineDatabase
+        class: Ibexa\Core\Persistence\Legacy\Content\UrlAlias\Gateway\DoctrineDatabase
         arguments:
             - "@ezpublish.api.storage_engine.legacy.connection"
             - "@ezpublish.persistence.legacy.language.mask_generator"
 
     ezpublish.persistence.legacy.url_alias.gateway.exception_conversion:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\UrlAlias\Gateway\ExceptionConversion
+        class: Ibexa\Core\Persistence\Legacy\Content\UrlAlias\Gateway\ExceptionConversion
         arguments:
             - "@ezpublish.persistence.legacy.url_alias.gateway.inner"
 
@@ -15,12 +15,12 @@ services:
         alias: ezpublish.persistence.legacy.url_alias.gateway.exception_conversion
 
     ezpublish.persistence.legacy.url_alias.mapper:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\UrlAlias\Mapper
+        class: Ibexa\Core\Persistence\Legacy\Content\UrlAlias\Mapper
         arguments:
             - "@ezpublish.persistence.legacy.language.mask_generator"
 
     ezpublish.spi.persistence.legacy.url_alias.handler:
-        class: eZ\Publish\Core\Persistence\Legacy\Content\UrlAlias\Handler
+        class: Ibexa\Core\Persistence\Legacy\Content\UrlAlias\Handler
         arguments:
             - "@ezpublish.persistence.legacy.url_alias.gateway"
             - "@ezpublish.persistence.legacy.url_alias.mapper"
