--- a/eZ/Publish/Core/settings/storage_engines/legacy/user.yml
+++ b/eZ/Publish/Core/settings/storage_engines/legacy/user.yml
@@ -1,11 +1,11 @@
 services:
     ezpublish.persistence.legacy.user.gateway.inner:
-        class: eZ\Publish\Core\Persistence\Legacy\User\Gateway\DoctrineDatabase
+        class: Ibexa\Core\Persistence\Legacy\User\Gateway\DoctrineDatabase
         arguments:
             - '@ezpublish.api.storage_engine.legacy.connection'
 
     ezpublish.persistence.legacy.user.gateway.exception_conversion:
-        class: eZ\Publish\Core\Persistence\Legacy\User\Gateway\ExceptionConversion
+        class: Ibexa\Core\Persistence\Legacy\User\Gateway\ExceptionConversion
         arguments:
             - "@ezpublish.persistence.legacy.user.gateway.inner"
 
@@ -14,12 +14,12 @@ services:
         alias: ezpublish.persistence.legacy.user.gateway.exception_conversion
 
     ezpublish.persistence.legacy.role.gateway.inner:
-        class: eZ\Publish\Core\Persistence\Legacy\User\Role\Gateway\DoctrineDatabase
+        class: Ibexa\Core\Persistence\Legacy\User\Role\Gateway\DoctrineDatabase
         arguments:
             - '@ezpublish.api.storage_engine.legacy.connection'
 
     ezpublish.persistence.legacy.role.gateway.exception_conversion:
-        class: eZ\Publish\Core\Persistence\Legacy\User\Role\Gateway\ExceptionConversion
+        class: Ibexa\Core\Persistence\Legacy\User\Role\Gateway\ExceptionConversion
         arguments:
             - "@ezpublish.persistence.legacy.role.gateway.inner"
 
@@ -28,27 +28,27 @@ services:
         alias: ezpublish.persistence.legacy.role.gateway.exception_conversion
 
     ezpublish.persistence.legacy.user.mapper:
-        class: eZ\Publish\Core\Persistence\Legacy\User\Mapper
+        class: Ibexa\Core\Persistence\Legacy\User\Mapper
 
     ezpublish.persistence.legacy.role.limitation.handler:
         abstract: true
-        class: eZ\Publish\Core\Persistence\Legacy\User\Role\LimitationHandler
+        class: Ibexa\Core\Persistence\Legacy\User\Role\LimitationHandler
         arguments:
             $connection: '@ezpublish.api.storage_engine.legacy.connection'
 
     ezpublish.persistence.legacy.role.limitation.handler.object_state:
         parent: ezpublish.persistence.legacy.role.limitation.handler
-        class: eZ\Publish\Core\Persistence\Legacy\User\Role\LimitationHandler\ObjectStateHandler
+        class: Ibexa\Core\Persistence\Legacy\User\Role\LimitationHandler\ObjectStateHandler
         tags:
             - {name: ezpublish.persistence.legacy.role.limitation.handler}
 
     # Note: services tagged with 'ezpublish.persistence.legacy.role.limitation.handler'
     # are registered to this one using compilation pass
     ezpublish.persistence.legacy.role.limitation.converter:
-        class: eZ\Publish\Core\Persistence\Legacy\User\Role\LimitationConverter
+        class: Ibexa\Core\Persistence\Legacy\User\Role\LimitationConverter
 
     ezpublish.spi.persistence.legacy.user.handler:
-        class: eZ\Publish\Core\Persistence\Legacy\User\Handler
+        class: Ibexa\Core\Persistence\Legacy\User\Handler
         arguments:
             - "@ezpublish.persistence.legacy.user.gateway"
             - "@ezpublish.persistence.legacy.role.gateway"
