--- a/eZ/Publish/Core/settings/storage_engines/shortcuts.yml
+++ b/eZ/Publish/Core/settings/storage_engines/shortcuts.yml
@@ -1,48 +1,48 @@
 services:
     ezpublish.spi.persistence.content_handler:
-        class: eZ\Publish\SPI\Persistence\Content\Handler
+        class: Ibexa\Contracts\Core\Persistence\Content\Handler
         factory: ["@ezpublish.api.persistence_handler", contentHandler]
 
     ezpublish.spi.persistence.content_type_handler:
-        class: eZ\Publish\SPI\Persistence\Content\Type\Handler
+        class: Ibexa\Contracts\Core\Persistence\Content\Type\Handler
         factory: ["@ezpublish.api.persistence_handler", contentTypeHandler]
 
     ezpublish.spi.persistence.language_handler:
-        class: eZ\Publish\SPI\Persistence\Content\Language\Handler
+        class: Ibexa\Contracts\Core\Persistence\Content\Language\Handler
         factory: ["@ezpublish.api.persistence_handler", contentLanguageHandler]
 
     ezpublish.spi.persistence.location_handler:
-        class: eZ\Publish\SPI\Persistence\Content\Location\Handler
+        class: Ibexa\Contracts\Core\Persistence\Content\Location\Handler
         factory: ["@ezpublish.api.persistence_handler", locationHandler]
 
     ezpublish.spi.persistence.object_state_handler:
-        class: eZ\Publish\SPI\Persistence\Content\ObjectState\Handler
+        class: Ibexa\Contracts\Core\Persistence\Content\ObjectState\Handler
         factory: ["@ezpublish.api.persistence_handler", objectStateHandler]
 
     ezpublish.spi.persistence.section_handler:
-        class: eZ\Publish\SPI\Persistence\Content\Section\Handler
+        class: Ibexa\Contracts\Core\Persistence\Content\Section\Handler
         factory: ["@ezpublish.api.persistence_handler", sectionHandler]
 
     ezpublish.spi.persistence.trash_handler:
-        class: eZ\Publish\SPI\Persistence\Content\Location\Trash\Handler
+        class: Ibexa\Contracts\Core\Persistence\Content\Location\Trash\Handler
         factory: ["@ezpublish.api.persistence_handler", trashHandler]
 
     ezpublish.spi.persistence.url_alias_handler:
-        class: eZ\Publish\SPI\Persistence\Content\UrlAlias\Handler
+        class: Ibexa\Contracts\Core\Persistence\Content\UrlAlias\Handler
         factory: ["@ezpublish.api.persistence_handler", urlAliasHandler]
 
     ezpublish.spi.persistence.url_wildcard_handler:
-        class: eZ\Publish\SPI\Persistence\Content\UrlWildcard\Handler
+        class: Ibexa\Contracts\Core\Persistence\Content\UrlWildcard\Handler
         factory: ["@ezpublish.api.persistence_handler", urlWildcardHandler]
 
     ezpublish.spi.persistence.user_handler:
-        class: eZ\Publish\SPI\Persistence\User\Handler
+        class: Ibexa\Contracts\Core\Persistence\User\Handler
         factory: ["@ezpublish.api.persistence_handler", userHandler]
 
     ezpublish.spi.persistence.bookmark_handler:
-        class: eZ\Publish\SPI\Persistence\Bookmark\Handler
+        class: Ibexa\Contracts\Core\Persistence\Bookmark\Handler
         factory: ["@ezpublish.api.persistence_handler", bookmarkHandler]
 
     ezpublish.spi.persistence.user_preference_handler:
-        class: eZ\Publish\SPI\Persistence\UserPreference\Handler
+        class: Ibexa\Contracts\Core\Persistence\UserPreference\Handler
         factory: ["@ezpublish.api.persistence_handler", userPreferenceHandler]
