--- a/eZ/Publish/Core/settings/thumbnails.yml
+++ b/eZ/Publish/Core/settings/thumbnails.yml
@@ -4,7 +4,7 @@ services:
         autoconfigure: true
         autowire: true
 
-    eZ\Publish\Core\FieldType\Image\ImageThumbnailStrategy:
+    Ibexa\Core\FieldType\Image\ImageThumbnailStrategy:
         arguments:
             $fieldTypeIdentifier: 'ezimage'
             $variationHandler: '@ezpublish.image_alias.imagine.cache.alias_generator_decorator'
@@ -12,32 +12,32 @@ services:
         tags:
             - { name: ezplatform.spi.field.thumbnail_strategy, priority: 0 }
 
-    eZ\Publish\Core\FieldType\Image\ImageThumbnailProxyStrategy:
-        decorates: eZ\Publish\Core\FieldType\Image\ImageThumbnailStrategy
+    Ibexa\Core\FieldType\Image\ImageThumbnailProxyStrategy:
+        decorates: Ibexa\Core\FieldType\Image\ImageThumbnailStrategy
         arguments:
             $imageThumbnailStrategy: '@.inner'
-            $proxyGenerator: '@eZ\Publish\Core\Repository\ProxyFactory\ProxyGeneratorInterface'
+            $proxyGenerator: '@Ibexa\Core\Repository\ProxyFactory\ProxyGeneratorInterface'
 
-    eZ\Publish\Core\FieldType\ImageAsset\ImageAssetThumbnailStrategy:
+    Ibexa\Core\FieldType\ImageAsset\ImageAssetThumbnailStrategy:
         lazy: true
         arguments:
             $fieldTypeIdentifier: 'ezimageasset'
-            $thumbnailStrategy: '@eZ\Publish\Core\Repository\Strategy\ContentThumbnail\ThumbnailChainStrategy'
+            $thumbnailStrategy: '@Ibexa\Core\Repository\Strategy\ContentThumbnail\ThumbnailChainStrategy'
             $contentService: '@ezpublish.api.service.content'
         tags:
             - { name: ezplatform.spi.field.thumbnail_strategy, priority: 0 }
 
-    eZ\Publish\Core\Repository\Strategy\ContentThumbnail\Field\ContentFieldStrategy:
+    Ibexa\Core\Repository\Strategy\ContentThumbnail\Field\ContentFieldStrategy:
         arguments:
             $strategies: !tagged_iterator ezplatform.spi.field.thumbnail_strategy
 
-    eZ\Publish\Core\Repository\Strategy\ContentThumbnail\FirstMatchingFieldStrategy:
+    Ibexa\Core\Repository\Strategy\ContentThumbnail\FirstMatchingFieldStrategy:
         arguments:
             $fieldTypeService: '@ezpublish.api.service.field_type'
-            $contentFieldStrategy: '@eZ\Publish\Core\Repository\Strategy\ContentThumbnail\Field\ContentFieldStrategy'
+            $contentFieldStrategy: '@Ibexa\Core\Repository\Strategy\ContentThumbnail\Field\ContentFieldStrategy'
         tags:
             - { name: ezplatform.spi.content.thumbnail_strategy, priority: 0 }
 
-    eZ\Publish\Core\Repository\Strategy\ContentThumbnail\ThumbnailChainStrategy:
+    Ibexa\Core\Repository\Strategy\ContentThumbnail\ThumbnailChainStrategy:
         arguments:
             $strategies: !tagged_iterator ezplatform.spi.content.thumbnail_strategy
