--- a/eZ/Publish/Core/settings/utils.yml
+++ b/eZ/Publish/Core/settings/utils.yml
@@ -1,3 +1,3 @@
 services:
     ezpublish.utils.deprecation_warner:
-        class: eZ\Publish\Core\Base\Utils\DeprecationWarner
+        class: Ibexa\Core\Base\Utils\DeprecationWarner
